--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,82 +1,36 @@
 ---
-title: 特鲁多像希特勒对待犹太人一样将“未接种者”当作替罪羊
+title: 01/08每日播报&#124;播客巨星乔·罗根加入盖特后引起注册浪潮
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836075/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836215/)
 
-翻译： Jenny Ball
+**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-489.png)图片来源：lifesitenews.com
+**2022-01-0**8
 
-《生活新闻》(LifeSiteNews) – 乔·拜登总统和总理贾斯汀·特鲁多（Justin Trudeau）诽谤反对接受实验性 COVID-19 基因治疗注射的美国人和加拿大人，将他们作为他们实施封锁的替罪羊。
+据《华盛顿邮报》1月7日报道，在播客巨星乔·罗根(Joe Rogan)加入后的几天内，盖特已经有超过 100 万新用户注册。
 
-特鲁多甚至将没有接种疫苗的加拿大人贴上否认科学的“极端主义者”、“种族主义者”和“厌恶女性主义者”的标签。
+报道称，盖特是一个吸引保守社交媒体用户的社交平台。罗根周日在该网站上发表了第一篇帖子的5天后，该平台的新用户已经达到了 100 万大关，。盖特发言人埃博尼·鲍登 (Ebony Bowden) 称，这使盖特网站的用户总数已经超过 了400 万。
 
-尽管受到批评，但他们都变本加厉，错误地声称未接种疫苗的人应对封锁负责，而他们非常清楚“科学”已经表明，疫苗并不防止最新的 Omicron 变体的传播。
+虽然罗根先生目前仍然拥有一个推特帐户，但是在乔治亚州众议员玛乔丽·泰勒-格林（Marjorie Taylor-Greene）的账号在周日被推特封号后，他考虑到了推特的审查制度，于是他加入了盖特。
 
-特鲁多所做的，正是当年希特勒在对犹太人大屠杀前所做的，他正在把整个社会阶层当作替罪羊，煽动仇恨。这就是我们今天在世界上面临的巨大危险——这不是 COVID，这是暴政，它正在威胁着我们所有人，无论是接种疫苗还是未接种疫苗。
+罗根先生在他的第一个盖特帖子中写道：“为了防止推特上的东西变得更蠢，我现在也在这里。欢呼吧！”
 
-加拿大总理贾斯汀·特鲁多在魁北克的一个受欢迎的脱口秀节目中发表评论，煽动对反对 COVID 疫苗的加拿大人的仇恨。由于他对法语采访的评论是在 9 月发表的，所以直到上周在社交媒体上发布时，这些评论才迅速传播开来。
+据报道，在罗根先生加入盖特的第二天，也就是 1 月 3 日，盖特到注册人数就达到了 343,000，这是该网站自 7 月推出以来的最大单日注册量。 鲍登还补充说，盖特并没有支付罗根加入该网站的费用。
 
-特鲁多谈到“强烈反对疫苗接种的人”。
+对于保守派来说，盖特网站的主要卖点是其较宽松的内容审核政策。盖特说，它允许所有关于政治和疫苗的观点，包括那些其他网站的事实核查员会标记为错误的观点。
 
-他们“不相信科学，他们往往是厌恶女性的人，也常常是种族主义者。”我见过的对精神错乱特鲁多的最佳回应，是**来自加拿大最受欢迎的专栏作家雷克斯****·****墨菲（****Rex Murphy****）**，他在《国家邮报》撰稿。
+同时盖特是一个国际平台。截至周五，盖特表示其在美国有220万用户，其次是巴西的50万用户，以及英国、德国和法国的大量用户。
 
-“对反疫苗者的愤怒是典型的找替罪羊，”墨菲说。随后，雷克斯继续让特鲁多看到他都干了什么，也只有雷克斯才能做到。我多希望我能用雷克斯的经典来表达：
+盖特的CEO杰森·米勒(Jason Miller)先生对《邮报》说：“这些数字证明，社交媒体用户开始意识到硅谷高管日益严厉的审查制度，并渴望获得替代方案。我们欢迎来自各种意识形态和背景的人在我们的平台上自由表达自己。”
 
-谁在这场瘟疫开始时让机场保持开放？
+（秘翻新闻主编Grace编译报道）
 
-谁说如果禁止来自中共国的航班就是“种族主义”？
-
-谁从共产主义中国订购了口罩？
-
-谁的发言人说口罩无效？
-
-然后谁的发言人又说必须戴口罩？
-
-谁警告说不要集会，然后去参加“黑命贵”抗议活动？
-
-谁在早餐后从下议院关闭了议会，指挥伟大的加拿大国家的政府？
-
-谁在他管理的大流行期间召集了选举？
-
-谁可以称是真正的“种族主义者”：他4次被拍到把脸涂黑羞辱黑人？
-
-谁在领导了一个试图将武装部队中的性行为不端指控掩盖到桌下的政府之后，现在抛出“厌恶女性”这个词？
-
-墨菲粉碎了特鲁多的暴政，因为特鲁多破坏了自由。
-
-当这同一个人通过他的 COVID 法令破坏所有加拿大人的权利和自由宪章时，谁会问我们是否可以“容忍”他？
-
-在特鲁多的领导下，他父辈的荣耀宪章已经变成了纸巾。
-
-在加拿大的大部分地区，未接种疫苗的人
-
-可能不能去他们想去的地方，
-
-可能不能在痛苦的时刻探望家人，
-
-可能不能在没有证件的情况下旅行或进入公共场所。
-
-最重要的是，如果你拒绝接种疫苗，你就是最重罪和最卑鄙的人； 你就是贾斯汀·特鲁多眼中的反派：反疫苗者。
-
-**在消除拜登类似的疯狂上，谁能比塔克****.****卡尔森更好？**
-
-如果只有北美这样做，已经够糟糕了，但这种现象遍布全球。在法国，马克龙总理竟然公开表示，“那些没有打疫苗的人，我真的讨厌他们，我们将继续讨厌他们，直到最后，这就是策略。”
-
-马克龙走得更远，也许发表了更令人发指的声明：“当我的自由成为对他人自由的威胁时，我就成了一个不负责任的个人。一个不负责任的人，不再是公民。” 他指责“反疫苗者”犯下了“巨大的道德错误”。“他们正在破坏一个国家的稳固性，”他说。
-
-在菲律宾，拒绝接受 COVID 注射的公民被迫面临罚款和监禁的威胁，被迫留在家中。 在许多国家，他们被拒绝使用公共交通工具，一些国家甚至试图禁止他们进入杂货店买日用品。
-
-这是暴政！这正是希特勒对犹太人所做的。他把他们当作替罪羊，**剥夺他们的自由，公开羞辱他们**。谴责这种找替罪羊的宗教领袖的声音在哪里？这一切发生时，大多数宗教领袖怎么竟能保持沉默？是时候大声疾呼，谴责暴政了，否则暴政就真的来了。
-
-新闻来源 ：[lifesitenews.com] [Trudeau is scapegoating the ‘unvaccinated’ like Hitler did the Jews](https://www.lifesitenews.com/blogs/trudeau-is-scapegoating-the-unvaccinated-like-hitler-did-the-jews/)
+发布:星星
 
 * * *
 
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
