--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,23 +1,30 @@
 ---
-title: 5725万剂次，北京平均每人接种3.5针毒疫苗
+title: 【Michael.Tonny专栏】揭露黑暗，消灭邪恶
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1835906/)
+`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1835997/)
 
-撰稿：东京樱花团/盐和光
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2-25.jpg)[图片来源](https://www.bbc.com/zhongwen/simp/chinese-news-56737307)
-1月8号北青网报道，根据北京市卫健委刚刚发布的消息，截至2022年1月7日，北京市累计报告接种中共病毒（新冠病毒Covid-19）疫苗5725.15万剂次，累计接种2247.80万人。
+作者：加拿大温哥华扬帆农场[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/michael-4.jpg)
+在共惨独裁统治下， 像正常人一样说话，像正常人一样做事，对于中共国人来说，永远是一个遥不可及的梦！
 
-北京简称“京”，古称燕京、北平，是中共国的首都。2021年人口普查北京总人数：全市总人口（常住人口）为2189.3095人，而累计接种2247.80万人，接种人口已超出全市常住人口60万，接种新冠病毒疫苗5725.15万剂次，北京平均每人接种3.5针。
+共惨党说，无论您才高八斗还是学富五车，都不得担任法官、检察官、警察、公务员、公证员、司法鉴定人员、人民陪审员甚至是律师，祖孙三代不能入党、征兵，不得参加银行、国企、事业单位、军校和警校招聘。
 
-中共病毒是血液和呼吸系统传播的病毒，中共毒疫苗就是通过注射传播的血液病毒，打一针中共病毒疫苗就像是打一针艾滋病毒针一样，刺突蛋白里包含艾滋病基因片段，毒疫苗没有通过动物试验。在动物试验阶段，所有动物100%死亡，试验老鼠2个月内100%死亡，然后试验猴子，也是100%死亡，打完疫苗之后它随着血液扩散到全身，最后到达微细血管，微细血管本身就很狭窄，刺突蛋白诱发免疫系统攻击血管壁细胞，导致微细血管进一步变窄和阻塞，无法输送携氧红血球，组织缺氧、发炎、坏死，平均每人三针半的剂量，中共病毒和毒疫苗将要屠城，以后的北京人将要濒临灭绝。
+一日为奴、终生为奴！
 
-消息来源：
+在中共魔鬼统治下，以合符正常人基本价值取向的逻辑判断，去思考和规划人生，带来的总会是千疮百孔！
 
-[【北京累计报告接种新冠疫苗5725.15万剂次】](https://t.ynet.cn/baijia/32022705.html?sdkver=2c9d920d)
+对于中共国人来说，除了消灭共惨党，还有别的选择吗？
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+我没有共惨党员的圆滑和狡诈，我只想做一个正常人！曾经幻想各种各样的英雄，能拯救苍生，以至蝼蚁。
+
+直到郭文贵先生的出现，我认定他就是我心中的盖世英雄！跟随郭文贵先生，加入新中国联邦，让我一次次躲过共惨体制下，每天发生的各种惨剧。
+
+我写的每一篇文章都只是一个具有正常逻辑思维能力的人，对正邪颠倒、善恶不分的世界，最朴素的思考。我每一天都想大声对共惨党说，“你完了”！没有华丽的词藻，只有正义对邪恶，光明与黑暗！
+
+无论您现在大隐于市，还是不得不暂时远走他乡，只要您“揭露黑暗，消灭邪恶”，您都是我心中的英雄！
+
+编辑：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)上传：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
