--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,34 +1,46 @@
 ---
-title: 强制疫苗国家的典型案例
+title: 泰勒·格林痛斥DC沼泽——我不相信我们的政府
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1836064/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836214/)
 
-撰稿：挺郭建筑师
-![](https://assets.gnews.org/wp-content/uploads/2022/01/803.jpg)图片制作：澳喜农场©森森
-2021 年2月8日起，强制疫苗在古老的欧洲大陆拉开了序幕。未接种疫苗者受到了诸如 “SIM卡被封”、“驾照被吊销”等一系列疯狂的制裁。一位名为文森特. 惹尼 (Vincent Geny)的作者于2022年1月6日在Marianne周刊发表了一篇报道，他总结了目前发生在疫苗独裁国家的一些典型案例。
+翻译： Jenny Ball
 
-梵蒂冈是世界上第一个实施强制疫苗的国家。首先是对神职人员，然后在 10 月将其扩大到所有人。对拒绝接种的人惩罚从罚款到解雇不等。这一强制措施于 10 月初扩大到瑞士卫队成员。其中三个成员宁愿返回瑞士也不打疫苗，而另外三人无限期搁置接种计划。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-498.png)图片来源:thegatewaypundit.com
 
-奥地利政府自去年11月19日起宣布：从2021年 2 月 1 日起，任何 14 岁以上的人都必须接种疫苗。奥地利人必须在 3 月 15 日之前完成接种。拒绝接种者将每三个月缴纳 600 欧元的罚款，拒付者罚金将高到 3,600 欧元。希腊很快步奥地利后尘。希腊总理于 11 月底宣布自 1 月 16 日起，还没有接受第一针的人将面临 100 欧元的罚款，每月累加。
+由于腐败的 华盛顿DC 沼泽一直忙于在 1.6 周年纪念日上表演党派戏剧，甚至一些共和党黑客也加入了进来——泰德·克鲁兹（Ted Cruz）就是其中之一——众议员马特·盖茨（Matt Gaetz）和玛乔丽·泰勒·格林(Marjorie Taylor Greene)正在驳斥他们的剧本，并揭穿建制派的谎言。
 
-印度尼西亚是第一个实施强制疫苗措施的亚洲国家。在 2021 年 2 月开始对所有成年人实施强制接种措施，其惩罚方式多种多样，取决于地方当局。在一些地区，居民因未接种疫苗而被拒绝发放驾照。或者中断社保金或者停止收发工作之必要信件。在首都雅加达，未接种疫苗的人最高可被罚款 290 欧元。这些强制措施导致的极端情况时有发生。2021 年 10 月 17 日，一名 19 岁女子报警遭到强奸，警方因为她没有疫苗接种证明而拒绝接警。
+可悲的是，盖茨和格林似乎是极少数关心 1.6 事件真相的民选代表——甚至是极少数关心那些作为政治犯被政府劫持为人质的美国公民。
 
-新加坡地方当局则将某些责任推卸给未接种者个人。所有入住重症监护病房的未接种病人都必须自己支付住院费用，约为 16,200 欧元。
+其他共和党人在哪里？ 他们不可能都像丹·克伦肖（Dan Crenshaw）一样，对吗？
 
-在巴基斯坦的旁遮普省，当局对未接种疫苗的人实施了断网。自 6 月 10 日起，未接种疫苗的人发现他们的 SIM 卡被封，而手机是该国最常用的上网方式。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-500.png)图片来源:thegatewaypundit.com
 
-在北美洲，加拿大联邦当局自 1 月 2 日起暂停了未接种者的失业救济金。联邦就业部长 Carla Qualtrough以保护就业和经济为名，要求民众接受其强制疫苗的“主导政策 ”。作为联邦政体的加拿大，每个省都有权颁布额外的政策措施。魁北克走得更远。蒙特利尔当局宣布，疫苗护照将扩展到烟酒售卖领域，而烟酒行业都由当局控制。这一措施将在未来几天内公布。
+周四，盖茨和格林举行了新闻发布会，两人在会上提请注意 1 月 6 日因政治信仰被违宪关押在特区古拉格(DC Gulag) 监狱的人们。
 
-法国政府也步步紧逼，1月6日早晨5点，通过议会偷偷摸摸将健康护照变成强制性疫苗护照。
+与其称美国公民为恐怖分子，并与1/6的宣传一起上——再次看看你泰德·克鲁兹——美国第一双人组 DC 沼泽，对爱国者进行可怕和专横的追捕，使数百名美国人被捕入狱。
 
-世界各主流国家通过强制疫苗政策加速戕害国民，追杀觉醒的民众。这也恰恰显示了政府首脑、政客和中共勾结者们的心虚。他们欲盖弥彰，穷凶极恶，必将激起更多良知媒体和民众的觉醒，奋起反抗，终为其送葬。
+在盖茨浏览了1/6 的几段视频后，这些视频在很大程度上被大型科技公司和媒体压制了，格林质疑联邦调查局为什么没有逮捕臭名昭著的1/6催化剂雷-埃普斯和其他几个在1/6可能由联邦调查局策划的事件中发挥主要作用的人。
 
-新闻参考链接：
+最后，格林说FBI 和 DOJ 需要好好解释。
 
-[https://www.marianne.net/societe/sante/cartes-sim-bloquees-permis-retires-ces-sanctions-folles-qui-visent-les-non-vaccines-dans-le-monde](https://www.marianne.net/societe/sante/cartes-sim-bloquees-permis-retires-ces-sanctions-folles-qui-visent-les-non-vaccines-dans-le-monde)
+“当我经过 DC 监狱时，我会告诉你，我没有看到谁——我没有看到雷·埃普斯（ Ray Epps），我没有看到他在那里浪费了几个月的时间，**被剥夺了正当程序的权利，被剥夺了见家人、接受治疗、理发和刮胡子的能力**。我没看到他在那里面。
 
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+你知道我还没有看到谁吗？我没有看到那个叫 约翰·沙利文（John Sullivan）的人——**一个参加过“安提法”(Antifa)、黑命贵(BLM)骚乱和整个运动的人，但却突然在 1 月 6 日决定成为川普的支持者**。
+
+[他] 是在国会大厦射击阿什莉·巴比特（Ashley Babbitt） 谋杀犯，然后将他的视频出售给媒体的那个人。他不在副监狱长凯瑟琳·兰德金（Kathleen Landerkin）华盛顿的监狱里，所以，我认为我们有很多问题要问，**应该回答这些问题的人，是我们的 ****FBI ****和我们的司法部。**”
+
+在目睹了整整一年之后，格林直截了当地说：“我不再相信我们的政府了。”
+
+盖茨和格林关于 DC 政治犯的整个新闻发布会，可以在文章素材链接查看。
+
+新闻来源 :[thegatewaypundit.com] [WATCH: MTG SLAMS Corrupt DC Swamp During Press Conference About Jan 6th Prisoners – “I Do Not Trust Our Government”](https://www.thegatewaypundit.com/2022/01/watch-mtg-slams-corrupt-dc-swamp-press-conference-jan-6th-prisoners-not-trust-government/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
