--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,21 +1,22 @@
 ---
-title: 哈萨克斯坦总统：我下令可以无预警开枪
+title: 南极疫情是外来输入，还是疫苗引发？
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836004/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1836115/)
 
-撰稿：东京樱花团/上善若水
-![](https://assets.gnews.org/wp-content/uploads/2022/01/7-8.jpg)（图片来源于本文链接）
-鉴于抗议浪延续多日，哈萨克斯坦总统托卡耶夫明确表示，授权安全部队可以在无事先警告的情况下开枪。当局称，迄今有40多人丧生。在国内爆发严重骚乱后，哈萨克斯坦总统托卡耶夫（Kassym-Jomart Tokajew）下令向武装示威者开枪。在一次全国电视讲话中，他说：“我已命令警察和军队在无预警的情况下开火。”
+撰稿—祥瑞舟
+校对/上传—无明逆流
 
-他称，在最近几天局势尤为严重的阿拉木图，2万示威者从事了攻击行为。他将示威者称为“恐怖分子”，受境外势力操控。数天来，哈萨克斯坦国内示威者同安全部队之间爆发冲突，其激烈程度前所未见。抗议活动最初针对不断上涨的天然气价格，很快扩展为反政府浪潮，并蔓延全国。周五早晨，该国电视台报称，迄今，有26名示威者被击毙，另有3000多人被捕。人们担心，平民死亡人数可能更高。官方称，至少有18名安全人员殉职。此前，托卡耶夫已宣布全国进入紧急状态，并吁请俄罗斯领导的军事联盟——集约组织（CSTO）派遣维和部队，提供帮助。这一维和部队首批官兵已于周四飞抵哈萨克斯坦。在电视讲话中，托卡耶夫对此致谢。他称：“我特别感谢俄罗斯总统普京。他对我的呼请做出了非常迅速、友好的回应。”
+据外媒报道，来自南极的一个偏远科考站近日传来了坏消息，半个月以来科考站超过一半的工作人员感染了新冠病毒。报道中指出，该南极科考站为“比利时南极伊丽莎白公主站”，在12月14日发现了第一例感染新冠病毒的工作人员。此后，又有多人病毒检测呈阳性。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/121374_1.jpg)
+该报道指出，所有工作人员在来到该科考站之前，都已经完成了新冠疫苗的接种，并且病毒检测也都呈阴性，目前尚不清楚是如何感染新冠病毒的。
+考虑到在病毒和疫苗真相面前所谓世界主流媒体已经被利益群体收买，从该篇报道中我们无法找寻更多的真相。然而实际上看过这篇报道的读者都会问同样的问题，他们是怎么感染病毒的？
 
-信息来源：
+尽管还缺乏足够多的证据，可常识是任何人都无法忽略的：在基本与世隔绝的南极，是不可能有外来输入传染源的。如果说有，那唯一的传染源很有可能是疫苗接种者自身疫苗副作用爆发所导致，这和西安情况有些相似。正如七哥最近爆料中提到过的那样，西安疫情是接种疫苗副作用导致的后果。
 
-[哈萨克斯坦总统：我下令可以无预警开枪](https://www.dw.com/zh/%E5%93%88%E8%90%A8%E5%85%8B%E6%96%AF%E5%9D%A6%E6%80%BB%E7%BB%9F%E6%88%91%E4%B8%8B%E4%BB%A4%E5%8F%AF%E4%BB%A5%E6%97%A0%E9%A2%84%E8%AD%A6%E5%BC%80%E6%9E%AA/a-60358301)
+除了爆料革命和部分西方正义人士一直在揭示病毒与疫苗真相，世界各国政府目前还都没有对病毒真相进行联合调查问责，疫苗接种也还没有被各国政府按下停止键，还需要更多时间去传播疫苗真相。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+当疫苗灾难频发、出现大量死亡和伤残案例，整个世界秩序陷入停摆与混乱的时候，人类当下面临的这场生化危机真正的拐点才会到来。停止接种疫苗、病毒追责以及疫苗追责将接踵而至，所有真相终将水落石出，正义终将战胜邪恶！
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
