--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,46 +1,82 @@
 ---
-title: 金木水火土是整个中国人文明的最根本的起源和逻辑思维
+title: 特鲁多像希特勒对待犹太人一样将“未接种者”当作替罪羊
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1835996/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836075/)
 
-G-TV视频链接：[https://gtv.org/video/id=61d9556adffab035958c2e3d](https://gtv.org/video/id=61d9556adffab035958c2e3d)
+翻译： Jenny Ball
 
-**郭文贵先生：**我的理解，筷子，中国的筷子，筷子是中国的筷子看着没有，阴阳，它是阴阳的，阴阳放了5个手指头里边，金木水火土，就是整个中国人的文明的最根本的起源和逻辑思维。而西方是1+1=2，中国1+1，两个筷子等于11，1+1=11，中国人完全是个包饺子文化的，是阴阳，它是天理，天文学说，是中国发明很早的，但是主要是在特别大清朝以后，大秦朝到最后的大清朝，愚民文化，就是商鞅五策，把文明彻底的断了层、断了代。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-489.png)图片来源：lifesitenews.com
 
-而西方文明跟随了逻辑文化，完就是今天的科学，严格讲真的，美国人是什么？宇宙无限大，他是在把沙子的事搞明白了，地球上把沙子搞明白了，中国人把宇宙搞明白了，但是把沙子给忘了。
+《生活新闻》(LifeSiteNews) – 乔·拜登总统和总理贾斯汀·特鲁多（Justin Trudeau）诽谤反对接受实验性 COVID-19 基因治疗注射的美国人和加拿大人，将他们作为他们实施封锁的替罪羊。
 
-所以说东西方文明之间如果是相合，它的刀和叉就是逻辑的开始。切掉，夹住，放嘴里，是吧？而且用不同的地方有不同的吃法，它是完全是逻辑学的，这就是科学，就是当下的科学。那么中国是阴阳，阴阳是大着去了是吧？男女，黑白天。我们在这两个文化实际上不是矛盾的，但可悲的事情，中国的先进的文明被西方的科学所替代，这就看到中国的所谓哲学，中国的和科学之间巨大的矛盾。
+特鲁多甚至将没有接种疫苗的加拿大人贴上否认科学的“极端主义者”、“种族主义者”和“厌恶女性主义者”的标签。
 
-所以中国人只有嘴巴上的巨人，行动上是侏儒；西方人是行动上的巨人，但精神上不见得多高，这就是为什么新中国联邦我们要做到的，海瑟老师每次讲到星座的时候，我觉得如果把星座和中国的五行能结合到一起，我们新中国联邦人，海瑟你就是我们新中国联邦的国师，就是精神哲学大师，期待着更多的能听到你的课，谢谢！
+尽管受到批评，但他们都变本加厉，错误地声称未接种疫苗的人应对封锁负责，而他们非常清楚“科学”已经表明，疫苗并不防止最新的 Omicron 变体的传播。
 
-字幕来源：[2022年1月1日文贵大直播元旦特别节目“正道至善，除恶建邦”全文字版（三）](https://gnews.org/zh-hans/1817244/)
+特鲁多所做的，正是当年希特勒在对犹太人大屠杀前所做的，他正在把整个社会阶层当作替罪羊，煽动仇恨。这就是我们今天在世界上面临的巨大危险——这不是 COVID，这是暴政，它正在威胁着我们所有人，无论是接种疫苗还是未接种疫苗。
 
-编辑整理：Jacques；
+加拿大总理贾斯汀·特鲁多在魁北克的一个受欢迎的脱口秀节目中发表评论，煽动对反对 COVID 疫苗的加拿大人的仇恨。由于他对法语采访的评论是在 9 月发表的，所以直到上周在社交媒体上发布时，这些评论才迅速传播开来。
 
-字幕文件制作：小满；
+特鲁多谈到“强烈反对疫苗接种的人”。
 
-视频制作及上传：Cindy；
+他们“不相信科学，他们往往是厌恶女性的人，也常常是种族主义者。”我见过的对精神错乱特鲁多的最佳回应，是**来自加拿大最受欢迎的专栏作家雷克斯****·****墨菲（****Rex Murphy****）**，他在《国家邮报》撰稿。
 
-G-News发布：小满；
+“对反疫苗者的愤怒是典型的找替罪羊，”墨菲说。随后，雷克斯继续让特鲁多看到他都干了什么，也只有雷克斯才能做到。我多希望我能用雷克斯的经典来表达：
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+谁在这场瘟疫开始时让机场保持开放？
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+谁说如果禁止来自中共国的航班就是“种族主义”？
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+谁从共产主义中国订购了口罩？
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+谁的发言人说口罩无效？
 
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+然后谁的发言人又说必须戴口罩？
 
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+谁警告说不要集会，然后去参加“黑命贵”抗议活动？
 
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+谁在早餐后从下议院关闭了议会，指挥伟大的加拿大国家的政府？
 
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+谁在他管理的大流行期间召集了选举？
 
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+谁可以称是真正的“种族主义者”：他4次被拍到把脸涂黑羞辱黑人？
 
+谁在领导了一个试图将武装部队中的性行为不端指控掩盖到桌下的政府之后，现在抛出“厌恶女性”这个词？
+
+墨菲粉碎了特鲁多的暴政，因为特鲁多破坏了自由。
+
+当这同一个人通过他的 COVID 法令破坏所有加拿大人的权利和自由宪章时，谁会问我们是否可以“容忍”他？
+
+在特鲁多的领导下，他父辈的荣耀宪章已经变成了纸巾。
+
+在加拿大的大部分地区，未接种疫苗的人
+
+可能不能去他们想去的地方，
+
+可能不能在痛苦的时刻探望家人，
+
+可能不能在没有证件的情况下旅行或进入公共场所。
+
+最重要的是，如果你拒绝接种疫苗，你就是最重罪和最卑鄙的人； 你就是贾斯汀·特鲁多眼中的反派：反疫苗者。
+
+**在消除拜登类似的疯狂上，谁能比塔克****.****卡尔森更好？**
+
+如果只有北美这样做，已经够糟糕了，但这种现象遍布全球。在法国，马克龙总理竟然公开表示，“那些没有打疫苗的人，我真的讨厌他们，我们将继续讨厌他们，直到最后，这就是策略。”
+
+马克龙走得更远，也许发表了更令人发指的声明：“当我的自由成为对他人自由的威胁时，我就成了一个不负责任的个人。一个不负责任的人，不再是公民。” 他指责“反疫苗者”犯下了“巨大的道德错误”。“他们正在破坏一个国家的稳固性，”他说。
+
+在菲律宾，拒绝接受 COVID 注射的公民被迫面临罚款和监禁的威胁，被迫留在家中。 在许多国家，他们被拒绝使用公共交通工具，一些国家甚至试图禁止他们进入杂货店买日用品。
+
+这是暴政！这正是希特勒对犹太人所做的。他把他们当作替罪羊，**剥夺他们的自由，公开羞辱他们**。谴责这种找替罪羊的宗教领袖的声音在哪里？这一切发生时，大多数宗教领袖怎么竟能保持沉默？是时候大声疾呼，谴责暴政了，否则暴政就真的来了。
+
+新闻来源 ：[lifesitenews.com] [Trudeau is scapegoating the ‘unvaccinated’ like Hitler did the Jews](https://www.lifesitenews.com/blogs/trudeau-is-scapegoating-the-unvaccinated-like-hitler-did-the-jews/)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
