--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,54 +1,34 @@
 ---
-title: 风和火在一起力量巨大,风和水在一起风仗水势却是可收的
+title: 强制疫苗国家的典型案例
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1835966/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1836064/)
 
-G-TV视频链接：[https://gtv.org/video/id=61d954cbdffab035958c2e1e](https://gtv.org/video/id=61d954cbdffab035958c2e1e)
+撰稿：挺郭建筑师
+![](https://assets.gnews.org/wp-content/uploads/2022/01/803.jpg)图片制作：澳喜农场©森森
+2021 年2月8日起，强制疫苗在古老的欧洲大陆拉开了序幕。未接种疫苗者受到了诸如 “SIM卡被封”、“驾照被吊销”等一系列疯狂的制裁。一位名为文森特. 惹尼 (Vincent Geny)的作者于2022年1月6日在Marianne周刊发表了一篇报道，他总结了目前发生在疫苗独裁国家的一些典型案例。
 
-**郭文贵先生：**你现在看一下，你看旁边这个角儿上，和你对面的遥相对面的角儿，小斯基，小斯基是今天灯光调的最好的，但是灯光它调最好的时候，你记住，它就同样一个另外一个极端就出来了。他是最好的，但是他的表情里边就现在小斯基属于缺水，这种人他属于缺水，他的脸部表情并不，并不悦悦。
+梵蒂冈是世界上第一个实施强制疫苗的国家。首先是对神职人员，然后在 10 月将其扩大到所有人。对拒绝接种的人惩罚从罚款到解雇不等。这一强制措施于 10 月初扩大到瑞士卫队成员。其中三个成员宁愿返回瑞士也不打疫苗，而另外三人无限期搁置接种计划。
 
-你再看，你再看这个非常有意思，你看看文耀，文耀和你、和你俩再对比一下子，文耀穿了今天是黄色，就是金色，黄为土，和你的水，水土是相克，知道了吗？你这水多，她是土多，土里边她戴黑色的，那里边马甲，你看水（土）很相平衡。文耀今天大赢，你俩水过多，会失去平衡。
+奥地利政府自去年11月19日起宣布：从2021年 2 月 1 日起，任何 14 岁以上的人都必须接种疫苗。奥地利人必须在 3 月 15 日之前完成接种。拒绝接种者将每三个月缴纳 600 欧元的罚款，拒付者罚金将高到 3,600 欧元。希腊很快步奥地利后尘。希腊总理于 11 月底宣布自 1 月 16 日起，还没有接受第一针的人将面临 100 欧元的罚款，每月累加。
 
-万物皆为平衡，风和火之间是什么你知道吗？风助火势，火体现风的价值，风和火在一起那就是，那家伙就是力量巨大；但风和水在一起，风水，你看风和水在一起的时候，风仗水势，但是你是可收的，其实很有意思。
+印度尼西亚是第一个实施强制疫苗措施的亚洲国家。在 2021 年 2 月开始对所有成年人实施强制接种措施，其惩罚方式多种多样，取决于地方当局。在一些地区，居民因未接种疫苗而被拒绝发放驾照。或者中断社保金或者停止收发工作之必要信件。在首都雅加达，未接种疫苗的人最高可被罚款 290 欧元。这些强制措施导致的极端情况时有发生。2021 年 10 月 17 日，一名 19 岁女子报警遭到强奸，警方因为她没有疫苗接种证明而拒绝接警。
 
-你看德州牛仔，那是老战友了，德州牛仔你看，这脸上一长上去，就是那种，要就在共产党那块，就是当地主的，一看地主的家庭长大的是吧？脑门大、有钱，是吧？鼻子还有肉是吧？然后一看很傲慢是吧？这是当地主的。他今天穿啥？灰色，灰色在，就是风的颜色，风里边黑的水，给它打上个红领带，看上去很协调很配合，但是你能看出他，他缺一样很重要，他今天应该穿黄，或者穿红，都比它好。
+新加坡地方当局则将某些责任推卸给未接种者个人。所有入住重症监护病房的未接种病人都必须自己支付住院费用，约为 16,200 欧元。
 
-我们中国人永远打领带是对比性的领带，可恰恰七哥过去也曾经很土过，也经历过，我真经过五台山大师站在那说：文贵，色彩就是你的运气，你走的路、你穿的衣服就是你的命，就是你的运。哇塞，从那以后我的时尚，我的穿着打扮就跟真的很按风水走的。
+在巴基斯坦的旁遮普省，当局对未接种疫苗的人实施了断网。自 6 月 10 日起，未接种疫苗的人发现他们的 SIM 卡被封，而手机是该国最常用的上网方式。
 
-你看看海瑟今天做这个大师级的，你看她这个头发你看看，像那个狮子王，咵一下子，眼镜是吧？然后里边黑灰白，你看这个配的颜色。你这不你不服不行，这就是个大师级，带着一种神秘的力量。就她这个眼眶小了和大了都不好，今天她就可以整明白了，哗，这个头发垂到这，是吧？你一看不缺水、不缺火、不缺土，金木水火土都不缺的人，这一看这人水肯定多，而且是要多少有多少，说停就停，可了不得了。
+在北美洲，加拿大联邦当局自 1 月 2 日起暂停了未接种者的失业救济金。联邦就业部长 Carla Qualtrough以保护就业和经济为名，要求民众接受其强制疫苗的“主导政策 ”。作为联邦政体的加拿大，每个省都有权颁布额外的政策措施。魁北克走得更远。蒙特利尔当局宣布，疫苗护照将扩展到烟酒售卖领域，而烟酒行业都由当局控制。这一措施将在未来几天内公布。
 
-你再看拉姆，年轻的，是吧？白色，白围巾，你看这粉色的小衣裳穿的年轻，这属于什么时候？这是刚刚叫初旺之水，是刚刚开始，这可了不得了，这就是年轻水，这就是真正的风水当中的风和水之间平衡，风仗水势，水火相生，同时它之间，它既能作恶，它也能行，它也能行善，就看你了。
+法国政府也步步紧逼，1月6日早晨5点，通过议会偷偷摸摸将健康护照变成强制性疫苗护照。
 
-霹雳姐姐来了，这霹雳姐姐，霹雳姐姐咱这名字都吓死人了，共产党不怕咱怕谁，就这名都能吓死人了是吧？央金拉姆、霹雳姐姐、小斯基、德州牛仔、文耀、海瑟，我的天，莘七女孩、长岛哥，你说都这名字吓死人了。所以说风水这个是五行，未来叫海瑟，海瑟讲的太好了。
+世界各主流国家通过强制疫苗政策加速戕害国民，追杀觉醒的民众。这也恰恰显示了政府首脑、政客和中共勾结者们的心虚。他们欲盖弥彰，穷凶极恶，必将激起更多良知媒体和民众的觉醒，奋起反抗，终为其送葬。
 
-字幕来源：[2022年1月1日文贵大直播元旦特别节目“正道至善，除恶建邦”全文字版（三）](https://gnews.org/zh-hans/1817244/)
+新闻参考链接：
 
-编辑整理：Jacques；
+[https://www.marianne.net/societe/sante/cartes-sim-bloquees-permis-retires-ces-sanctions-folles-qui-visent-les-non-vaccines-dans-le-monde](https://www.marianne.net/societe/sante/cartes-sim-bloquees-permis-retires-ces-sanctions-folles-qui-visent-les-non-vaccines-dans-le-monde)
 
-字幕文件制作：小满；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
