--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,34 +1,52 @@
 ---
-title: 快手就算大规模裁员最终也得跟着CCP一起破产
+title: 风水是德行的标准是人在社会上和大自然相处的一个地位
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1835945/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1836022/)
 
-撰稿：永遠の小学生文筝
-![](https://assets.gnews.org/wp-content/uploads/2022/01/802.jpg)图片来自网络
-**快手自去年底开始了大规模裁员**
+G-TV视频链接：[https://gtv.org/video/id=61d95648dffab035958c2e62](https://gtv.org/video/id=61d95648dffab035958c2e62)
 
-根据澎湃新闻的报导，短视频APP公司快手科技的员工向其透露，快手始于去年年末的仍在继续，有的部门裁员比例多达30%。2021年9月28日发布的快手内部邮件显示，快手有国际化、商业化、电商、游戏四大部门，据说这波裁员中都有一定比例的员工被裁。虽然是想通过裁员减少支出，但最终仍旧会被中共搞死。
+**郭文贵先生：**人的命不是天注定，人的命是一定记住自己来决定的。我举个最简单的例子，说这个人运特别好，他生下来就是当官的命，你把他送到监狱去，你看看他还能当官吗？不可能的。分分钟就可以改变，人的命是就在你手里边，环境改变。如果他说他我就是当官命，送到阿富汗去，他不想当官他想吃粮食。大环境决定了一个你个体在环、大环境面前什么都不是，地球都没了，没有人命运的好，没有什么官运、财运、境运。
 
-**快手缩减成本的各种动作**
+我告诉你一定要记住，人的选择是第一的，就你做每件事情都是你的选择，而且你选择里边就是你的风水带来的，所有的风水就是你的德行，就你人的本性。绝不可能有任何德性不好的人，说我现在我命特别好，我告诉你命好，不是你想当上官、发了财就好。
 
-为了缩减成本快手进行了各种不得人心的政策，调整租房补贴范围，取消了免费的三餐以及下午茶。此前还被曝出上海、广州、深圳、北京的商业化团队部分业务条线要被取消，其余的要在12月底前搬到杭州，并要求一部分员工在搬家和离职之间选择。
+有人是老天就用钱，像马云，就虐待他，儿子脑开瓢，老婆几次癌症，他现在失去了全家的自由。马云你看，他能有长岛哥幸福吗？他没有的。有的人要当官，张高丽当这么都成了副国级了，现在“宇宙无限大，地球一粒沙”，生不如死，权力、金钱可能也是惩罚你的方式。
 
-**快手股票的走势说明是个垃圾股**
+你先说你的风水，你的成功就刚才你讲这些事情，这在生命中根本不算什么事是吧？你缺的就是一件事情，你先把你自己的德性和你对人生的看法的高度，和你认为确定你喜欢和成功的标准定下来，你就对风水这个事重新定义。
 
-从快手上市以来的走势就可以看出这不是家有优质产品的公司，只是作为互联网中常见的被资本包装后用来套钱的概念公司而已。对于跟风进入的散户而言，最终只是替别人接盘而已。当资金背后的中共利益集团套现之后，快手只会成为持续下跌的垃圾股。
+风水就是一个人的德行的标准，就是一个人在社会上和大自然相处的一个地位，绝不是金钱，也不是拥有多少女人、多少来名利来控制的，但你看明白之后，你会把你所有你刚才谈的什么，都是小事，什么坟地……
 
-**快手与其他互联网公司最终会被中共收走**
+我告诉你，坟地你理解以后，你会知道坟地是干啥的。坟地是有灵（魂），有一些没升到天的灵魂和没有投胎的灵魂凝聚之地，是很腌臜的地方，但是腌臜里面一定它也有不同的层次。你看到这些都是小儿科，这都是太小的了，我可以给你搞好多好多实验，会让你彻底改变。
 
-去年多家互联网企业都经历了大规模裁员，跟习近平要将国家带向北朝鲜模式分不开。习近平希望的是影视、音乐、艺人等都为共产党服务，创造歌颂党的作品。像游戏这种跟党抢人脑地盘的行业，自然是无法允许其存在的，党需要的是党文化控制下的人民，也就是听话的奴隶，对游戏上瘾的人可不会任劳任怨。
+就是说明你对社会和人性和地球的认知还不能解释你现在所有人生面对的十之八九不如意。还有一些你根本对世界的认知，你真的是宇宙那么大和地球一粒沙那么个差距，你认知太少了，你认知多少这都不算。提高你的知识，提高你的德行，提高你的标准，这些都是小事，这就是答案，风水即知识。
 
-参考消息：
+字幕来源：[2022年1月1日文贵大直播元旦特别节目“正道至善，除恶建邦”全文字版（三）](https://gnews.org/zh-hans/1817244/)
 
-[中國短影音巨頭再傳裁員30% 規模擴及4大事業部門](https://udn.com/news/story/7333/6011532?from=udn-catebreaknews_ch2)
+编辑整理：Jacques；
 
-[快手再曝裁员：覆盖四大事业部，个别团队裁员比例30%](https://www.thepaper.cn/newsDetail_forward_16137691)
+字幕文件制作：小满；
 
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
