--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,46 +1,25 @@
 ---
-title: 高僧大德者都是自食其力而达赖喇嘛却没看清自己的问题
+title: 香港&#8221;派对门&#8221;：逾百人全须送检隔离 港府被批搞双标
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1835937/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836016/)
 
-**郭文贵先生：**大师这人不懂电脑、不懂科技，还给我们讲这话，你知道有多神奇吗！还有一个他更重要的事情，他说我见过真正的高僧大德，从来不要一分所谓的奉献，他说我从小到大，我靠我徒弟我都没让他给我弄过一粒粮食，他说我修行的最大的修行，就是我到现在自食其力。
+撰稿：东京樱花团/上善若水
+![](https://assets.gnews.org/wp-content/uploads/2022/01/6-14.jpg)（图片来源于本文链接）
+香港全国人大代表洪为民本周一（1月3日）举行逾百人生日派对，事后有一名与会者确诊中共病毒（新冠病毒Covid-19），另一名与会者初步确诊。据香港电台援引卫生防护中心传染病处主任张竹君报道，两名确诊者互不认识，当局难界定紧密接触者逗留，因此当晚整个场合的人士都要检疫。卫生防护中心另外表示，因为这场聚会须检疫人数超过170人，成为这一波疫情最大的传播群组。出席宴会的人包括香港政界高层及部分立法会议员，民政局局长徐英伟、财经事务局局长许正宇、警务处处长萧泽颐、入境处处长区嘉宏、廉政专员白韫六等纷纷在列。
 
-他在武当山，他说文贵你知道什么叫昆仑山脉？什么叫巽山？什么叫垦山？大家知道吗？垦山是什么？巽山是什么，巽山就是风，风就是巽山，大家我都不愿跟你们讲这个，啥叫金木水火土风水呀？为什么有武当山？为什么有南普陀山？为什么有武夷山？为什么有今天的嵩山？中岳嵩山。为什么有我们的所谓的昆仑山？峨眉山？你说山脉咋来的呢？
+当日举行生日宴的洪为民于周五当天发文致歉。有人附上一张他当晚不戴口罩与他人肩并肩唱歌的照片作为回应。根据香港的防疫规定，在餐饮场所离开餐桌时亦须配戴口罩。周五，香港政府刊宪公布强制检测名单，涉及44个处所，其中就包括洪为民举行宴会的西班牙餐厅。
 
-所有的山，就是中国一个人文的历史，就是有些把隔断了…有些人在噩梦中，你就待着恶梦里，永远不要回来，就是人自杀的人和杀人，你就呆在恶梦里，被放在了整个的山脉之下。有些人为什么从南普陀升起来了？因为它要有任务，他要完成任务。你会醒来发现你舒服的在你家床上。
+香港政府周三宣布因应奥密克戎疫情已进入社区，收紧多项社交距离措施，周四（1月7日）凌晨零时起晚市禁堂食、并关闭酒吧、健身室和体育场地等表列处所、取消所有大型活动包括单车节等，为期14天。
 
-就现在钟仁去拥抱母亲父亲的时候，你拥抱一次，你相信我，你身体好一次，你谁拥抱你的家人、父母、兄弟姐妹，一定七哥..绝对没有任何…我没有任何，像那些欺民贼似的都为了捐钱啥的，包括我在这穿衣裳，我就是要告诉你，什么叫正道，你拥抱你家人、你朋友时，你会好一次，绝对比你不拥抱好得多，你想健康，你想风水，你想顺…要爱别人，别爱自己超过了爱别人，爱别人时候就会爱自己。
+港府公布最新措施后不久，便传出洪为民生日宴会爆疫的消息，因此有不少评论指出这是“只许高官赴宴、不许百姓堂食”的双重标准。例如，香港《星岛日报》认为：“对普罗百姓防疫要求多多，却对高官违反规定却只眼开，只眼闭。正因为高官未能以身作则，势将影响政府的公信力。”香港《明报》更是发文直接要求：徐英伟拖抗疫后腿，失当行为须即下台。
 
-这是我看到的高僧大德当中、一生当中，绝对没要任何伸手的，我为啥我信呐？
+信息来源：
 
-达赖喇嘛，他说达赖喇嘛一生当中不能自食其力，达赖喇嘛最回去去武当山去他那儿。他说一生当中，他说达赖喇嘛没看清自己的问题，西藏人没有把自己的生活解决下，他说你永远会被别人解决。哇~塞！这话说的太好了！西藏人所有的佛教，如果还靠大家来捐赠、黄金、死人不在乎，那时候你永远不会被解救。
+[香港”派对门”：逾百人全须送检隔离 港府被批搞双标](https://www.dw.com/zh/%E9%A6%99%E6%B8%AF%E6%B4%BE%E5%AF%B9%E9%97%A8%E9%80%BE%E7%99%BE%E4%BA%BA%E5%85%A8%E9%A1%BB%E9%80%81%E6%A3%80%E9%9A%94%E7%A6%BB-%E6%B8%AF%E5%BA%9C%E8%A2%AB%E6%89%B9%E6%90%9E%E5%8F%8C%E6%A0%87/a-60357390)
 
-所以我服他、我信他、我更相信他，人生就是黄粱一梦。我们要在黄粱一梦里边儿，变成我们的仙梦，人生是仙梦一场，否则，你就变成了黄粱一梦。
-
-编辑整理：海贼王M.D.LUFFY；
-
-G-News发布：海贼王M.D.LUFFY；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们——**[**日本银河系农场Discord群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：日本银河系农场。
-
-
-
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
