--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,52 +1,21 @@
 ---
-title: 喜联储已成为世界前五大交易所一千万HDO搅不起浪花
+title: 为何有脱北者选择回朝鲜？
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1835916/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836003/)
 
-G-TV视频链接：[https://gtv.org/video/id=61d9536adffab035958c2dc3](https://gtv.org/video/id=61d9536adffab035958c2dc3)
+撰稿：东京樱花团/上善若水
+![](https://assets.gnews.org/wp-content/uploads/2022/01/3-11.jpg)（图片来源于本文链接）
+在刚刚过去的元旦，一名2020年11月穿越非军事区进入韩国的脱北者循相同路线重回朝。此事引起韩国社会的广泛讨论。此事件被韩媒称为“回力镖叛逃”。韩国媒体批评军方守卫松散，玩忽职守. 一般而言，通过非军事区（DMZ）叛逃的情况极为罕见。在这个长达248公里，宽约4公里的边境地带，除了设有铁丝网外，两侧都有重兵把守，更设置了地雷和坦克陷阱。每当有人设法穿越非军事区而且未被察觉，韩国军方便会受到公众的强烈质疑与批评。韩国军方为此事道歉，韩国联合参谋本部议长元仁哲表示：“我对于这起事件感到非常抱歉。我承诺尽一切努力确保类似事件不再发生。”韩总统文在寅已下令对军队的整体安全布局进行特别检查。
 
-几天前长岛哥跟老班长我们通话，他们要卖币，而且是沟通完的，我们要让喜联储知道，它跟我们是独立的关系，但是呢，它有点失控，它对我们战友的尊重和投资者的尊重不够。
+韩民众疑惑为何脱北者会选择回到一个生活极为艰难的国度，至少在外人的眼里是如此。据报道，该名返朝的脱北者只能做“门卫”，为了生计而挣扎。负责协助脱北者适应韩国社会的统一部则强调，除了金钱补助外，该名男子在寻找住宿和求职时都获得帮助，而享有医疗福利。尽管如此，在迄今逃往韩国的3万多名脱北者中，至少30人在过去10年间选择重返朝鲜。每个人回朝鲜的理由都不同。“有人觉得在这里保住工作很难；有人因为思念当地的亲人；还有人无法适应文化差异、难以适应韩国生活；有人不能通过文凭考试，迫不得已只能在餐厅打工；或是觉得受到歧视。”
 
-我们，最后长岛哥一个小时套现1200万美元HDO，这我可以告诉，不要说在美国、在中国，在世界上任何一个地方，一个人从一万多块钱的成本，两万多块钱的成本，变成1200万，这不是开玩笑的，我告诉你，高盛它也没这个水平。这可以是非洲一个小国家一年的GDP都可以，但是很多人风言风语就出来了，是吧！
+信息来源：
 
-大家有误解都可以理解，但是一定要记住，“风言风语”呀，是因为你不自信！是因为你不了解这个世界！就是你真不知道“宇宙无限大，地球是一粒沙”的这个比例关系，是你站在沙子上看沙子，是吧？你没站在宇宙上看沙子，看地球。今天早上，我是给长岛哥打电话，我说你今天这个喜币涨涨，是吧，咱们涨涨今天，还是砸砸，你今天出出手。
+[为何有脱北者选择回朝鲜？](https://www.dw.com/zh/%E4%B8%BA%E4%BD%95%E6%9C%89%E8%84%B1%E5%8C%97%E8%80%85%E9%80%89%E6%8B%A9%E5%9B%9E%E6%9C%9D%E9%B2%9C/a-60359568)
 
-结果当时我记得他给我说句话：“七哥，这价格好控，分分钟咱这1200万HDO，说涨就涨50去了。” 我一声没吱，因为什么？因为长岛哥是站在沙子上看宇宙，他很无知。但我说他不信我的，包括老班长都不会信我！我要说你根本不可能，那他一定觉得我没试过我怎么知道呢？是吧？我没有见过水多的人，我咋知道水多的快乐呢？它一样的道理，是吧。
-
-像七哥这老中医一说水多的事情，马上“咵咵咵”跟政治和医生什么的都连在一起了，因为咱是老中医呀，咱有这个经验呐。长岛哥他不懂，我说他不会信的，他今天他知道了，他把他的六、七百万HDO砸进去以后，根本没动静。你有点常识你就知道了，你想想市场上有多少币？现在都已经锁了币了，还有几千万个币在那块儿随时可以出手的。
-
-最夸张的事情，二手市场的币从第一天到今天换手率达到超过55%，这个不是开玩笑的，这个币如果在市场上再流通、再卖，比如说我二级市场买的币，我没给你锁币，我再卖三次你也管不着，是吧！那你想想多少钱知道吗？兄弟姐妹们，就这个基本上你往上涨一块钱到两块钱，你可能需要4亿美元的支持，你那个一千多万HDO算什么钱？一千多万HDO。
-
-所以他今天知道，你那点钱真不算什么钱在喜联储，喜联储已经成为世界上前五大交易所，就短短的一百来天，就已经前五大交易所，你在开玩笑呢吧？是吧？所以说你知道风言风语呀，是因为你的无知和你对整个宇宙和沙子的比例没搞明白。还有一个，你没有常识，你没有经验。还有，大家记住，这个一旦上市的东西，你是瞒不住的，没有任何人可以瞒得住。
-
-字幕来源：[2022年1月1日文贵大直播元旦特别节目“正道至善，除恶建邦”全文字版（三）](https://gnews.org/zh-hans/1817244/)
-
-编辑整理：Jacques；
-
-字幕文件制作：小满；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
