--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,23 +1,46 @@
 ---
-title: 【中日财经爆】日本一定会成为第二大数字货币市场
+title: 金木水火土是整个中国人文明的最根本的起源和逻辑思维
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1835905/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1835996/)
 
-撰稿：东京樱花团/ 盖特第一批注册
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-85.png)图片来源于本文链接
-我一再说到日本的HPAY市场，还有日本的未来的数字货币整个的未来，还有在日本的整个的喜币和喜美元的流行，还有未来整个的实施。可以说它是战略性的，应该说是排第二位，除了美国之外它是最重要的。
+G-TV视频链接：[https://gtv.org/video/id=61d9556adffab035958c2e3d](https://gtv.org/video/id=61d9556adffab035958c2e3d)
 
-而且日本这个国家，一定会在数字货币市场上这次会抓住这个机会，它不会再输掉了。过去的日本二战之后，在金融市场市场上，简直这个日本这个国家，把所有的国家的财富全输光了。日本的金融烂到什么程度，共产党的科技发明有多烂，日本的金融就有多烂，就这么简单。
+**郭文贵先生：**我的理解，筷子，中国的筷子，筷子是中国的筷子看着没有，阴阳，它是阴阳的，阴阳放了5个手指头里边，金木水火土，就是整个中国人的文明的最根本的起源和逻辑思维。而西方是1+1=2，中国1+1，两个筷子等于11，1+1=11，中国人完全是个包饺子文化的，是阴阳，它是天理，天文学说，是中国发明很早的，但是主要是在特别大清朝以后，大秦朝到最后的大清朝，愚民文化，就是商鞅五策，把文明彻底的断了层、断了代。
 
-所以说日本的整个的交易一定会有，不管中间有多大的曲折，日本最后一定会成为喜币流行的重要市场。不管有多少挫折，然后在日本这个喜支付是绝对的重要，千万不要错过了时机。
+而西方文明跟随了逻辑文化，完就是今天的科学，严格讲真的，美国人是什么？宇宙无限大，他是在把沙子的事搞明白了，地球上把沙子搞明白了，中国人把宇宙搞明白了，但是把沙子给忘了。
 
-日本的这几个农场，因为今天没有说太（细），如果你们错过这个机会，那草根小哥明年这个，再在大直播，你绝对看不到草根小哥了，你不会再看到Cosmos，你不会再看到马拉多纳，你不会再看到勇气、魔女，不会看到的。温暖姐姐，你别在那儿很自信，你别老是今天你和文嘉你俩一唱一和地，我们有蓄积的力量，明年如果在这个事上没搞明白，明年你就成个笑话了。你自己都不好意思看电视了。所以说抓住这机会，一定会是最重要的。对喜币发展的市场就是第二市场。
+所以说东西方文明之间如果是相合，它的刀和叉就是逻辑的开始。切掉，夹住，放嘴里，是吧？而且用不同的地方有不同的吃法，它是完全是逻辑学的，这就是科学，就是当下的科学。那么中国是阴阳，阴阳是大着去了是吧？男女，黑白天。我们在这两个文化实际上不是矛盾的，但可悲的事情，中国的先进的文明被西方的科学所替代，这就看到中国的所谓哲学，中国的和科学之间巨大的矛盾。
 
-[消息来源](https://gettr.com/post/ple42ae1c8)
+所以中国人只有嘴巴上的巨人，行动上是侏儒；西方人是行动上的巨人，但精神上不见得多高，这就是为什么新中国联邦我们要做到的，海瑟老师每次讲到星座的时候，我觉得如果把星座和中国的五行能结合到一起，我们新中国联邦人，海瑟你就是我们新中国联邦的国师，就是精神哲学大师，期待着更多的能听到你的课，谢谢！
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+字幕来源：[2022年1月1日文贵大直播元旦特别节目“正道至善，除恶建邦”全文字版（三）](https://gnews.org/zh-hans/1817244/)
+
+编辑整理：Jacques；
+
+字幕文件制作：小满；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
