--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,31 +1,25 @@
 ---
-title: 我们要改变中国人苦大仇深天下人欠他钱的风貌做正常人
+title: 风和火在一起力量巨大,风和水在一起风仗水势却是可收的
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1835896/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1835966/)
 
-G-TV视频链接：[https://gtv.org/video/id=61d952b0dffab035958c2d9c](https://gtv.org/video/id=61d952b0dffab035958c2d9c)
+G-TV视频链接：[https://gtv.org/video/id=61d954cbdffab035958c2e1e](https://gtv.org/video/id=61d954cbdffab035958c2e1e)
 
-**郭文贵先生****:**我想再说一下水，今天为啥七哥、东弟的一番真话它道出了中国人生活的悲哀？精神上的悲哀，肉体生理上的悲哀，环境上的悲哀，还有整个人性的扭曲。
+**郭文贵先生：**你现在看一下，你看旁边这个角儿上，和你对面的遥相对面的角儿，小斯基，小斯基是今天灯光调的最好的，但是灯光它调最好的时候，你记住，它就同样一个另外一个极端就出来了。他是最好的，但是他的表情里边就现在小斯基属于缺水，这种人他属于缺水，他的脸部表情并不，并不悦悦。
 
-就我们今天拥抱太阳说的，就是孩子都生下来，他非给你掐死，他先让你生，60岁的人要生出来孩子，结果是一精神病，而且是被绑架拐卖的精神病生出的孩子。何其荒唐！
+你再看，你再看这个非常有意思，你看看文耀，文耀和你、和你俩再对比一下子，文耀穿了今天是黄色，就是金色，黄为土，和你的水，水土是相克，知道了吗？你这水多，她是土多，土里边她戴黑色的，那里边马甲，你看水（土）很相平衡。文耀今天大赢，你俩水过多，会失去平衡。
 
-今天看到今天Ruth看到我们的玛丽雅从不信到信到今天站在这里；文紫妹妹作为一个医生，她亲眼看到今天；文霄兄弟从一开始想怎么挣钱，然后孝敬父母，一切都是人性的本质，就是善和恶的区别，自然和非自然的区别，真和假的区别。
+万物皆为平衡，风和火之间是什么你知道吗？风助火势，火体现风的价值，风和火在一起那就是，那家伙就是力量巨大；但风和水在一起，风水，你看风和水在一起的时候，风仗水势，但是你是可收的，其实很有意思。
 
-你七哥每次坐在这的时候，就我跟大家直播的时候，我每次都告诉我自己，我说的每句话我都应该严肃认真负责任。我是女人生的，我不是从天上，石头缝掉出来的，我有老婆，我有女儿，我有儿子，我家人几百口，我难道没有尊严吗？你觉得我生活中天天这么讲，你七嫂子不早拿锅盖把我给闷死了，是不是？我们家很传统很严肃的，我连光脚的时候都很少，你嫂子从来都不光脚的。
+你看德州牛仔，那是老战友了，德州牛仔你看，这脸上一长上去，就是那种，要就在共产党那块，就是当地主的，一看地主的家庭长大的是吧？脑门大、有钱，是吧？鼻子还有肉是吧？然后一看很傲慢是吧？这是当地主的。他今天穿啥？灰色，灰色在，就是风的颜色，风里边黑的水，给它打上个红领带，看上去很协调很配合，但是你能看出他，他缺一样很重要，他今天应该穿黄，或者穿红，都比它好。
 
-为什么谈这话题？我们为什么这么做？就是把中国人那种苦大仇深的，走哪去一副欠天下人钱、天下人欠他钱的那个脸，我们要改变过来，我们是正常的人。凡是符合自然的，符合善的，有利于他的，我们都可以讲。就像你看我们的原Rachel，现在Sherry，你看小新老师、这边的Ruth、我们的Eglise、玛丽雅、文紫、文霄、拥抱太阳，就这一个是多少人的人生，他后边有多少个家庭？有多少经历啊？我们为什么今天不能把这些真实的经历分享给所有人呢？
+我们中国人永远打领带是对比性的领带，可恰恰七哥过去也曾经很土过，也经历过，我真经过五台山大师站在那说：文贵，色彩就是你的运气，你走的路、你穿的衣服就是你的命，就是你的运。哇塞，从那以后我的时尚，我的穿着打扮就跟真的很按风水走的。
 
-如果中国人都能像Eglise这样恢复到青春，都“水”多了，共产党你不用宣传，自然会有人生三胎四胎五胎，中国人的精神、肉体健康了，你这个国家不健康不强大都不可能的。
+你看看海瑟今天做这个大师级的，你看她这个头发你看看，像那个狮子王，咵一下子，眼镜是吧？然后里边黑灰白，你看这个配的颜色。你这不你不服不行，这就是个大师级，带着一种神秘的力量。就她这个眼眶小了和大了都不好，今天她就可以整明白了，哗，这个头发垂到这，是吧？你一看不缺水、不缺火、不缺土，金木水火土都不缺的人，这一看这人水肯定多，而且是要多少有多少，说停就停，可了不得了。
 
-我20多年前我到日本的时候我到福冈去，我跟人家日本家人吃饭，我说：“我从来没觉得你们家有探讨、需要什么，有什么问题。” 给我种植的那个日本的那个水瓜，让我吃，喝得醉麻哈的。结果老人家：“Anunai（注：日文）”
+你再看拉姆，年轻的，是吧？白色，白围巾，你看这粉色的小衣裳穿的年轻，这属于什么时候？这是刚刚叫初旺之水，是刚刚开始，这可了不得了，这就是年轻水，这就是真正的风水当中的风和水之间平衡，风仗水势，水火相生，同时它之间，它既能作恶，它也能行，它也能行善，就看你了。
 
-我说这，老人家有愁容了，我说：“你最愁是什么？”他说：“日本最大的问题，孩子不生育，压力太大。” 当时让我就是一激灵，我说：“这中国人都计划生育，你们这不生育。” 他说：“中国最大的问题未来就是这个计划生育，日本人的问题现在就是自然不想生育，生活压力太大，太紧凑生活。”
-
-我们今天看看，30年前，20年前，你们当过医生的你去查一查西方世界警告了中国三件事，说中国从八九以后告诉中国的，中国一定要小心：环境污染给中国和人类带来灾难，你看看发生了没有？第二，中国的计划生育会把中国会把人类拖入到人类的大劫难，你看发生了没有？第三，说中国人如果不学会、不懂得与大自然相处和确定一个自己的信仰，一个没有信仰的十几亿人的国家走向越强大越危险，世界要警惕，你看发生了没有？
-
-你今天面对的疫苗灾难、病毒灾难、人道灾难，整个连社交媒体都不让用，爹亲娘亲不如党亲的党在新疆、西藏、香港、台湾，一切一切的发生，此时此刻阿富汗死的人，我们是何等的幸运，我们是逃出和看出这三个魔咒的，就咱们这些人。
-
-今天我们是红女黑男粉女出现在这里，你们的良知、你们的专业将拯救无数的苍生，你们都是活菩萨，太感谢了！七哥向你们致以最衷心的问候，希望你们给我们新中国联邦带来的“水”越多越好。我们今年寅水之年，祝你们幸福健康，水越来越多。谢谢大家，谢谢！
+霹雳姐姐来了，这霹雳姐姐，霹雳姐姐咱这名字都吓死人了，共产党不怕咱怕谁，就这名都能吓死人了是吧？央金拉姆、霹雳姐姐、小斯基、德州牛仔、文耀、海瑟，我的天，莘七女孩、长岛哥，你说都这名字吓死人了。所以说风水这个是五行，未来叫海瑟，海瑟讲的太好了。
 
 字幕来源：[2022年1月1日文贵大直播元旦特别节目“正道至善，除恶建邦”全文字版（三）](https://gnews.org/zh-hans/1817244/)
 
