--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,46 +1,93 @@
 ---
-title: 新中国联邦不仅让你灭共还让你发财有尊严还让男女水多
+title: 01/08每日播报&#124;社媒消息：蓬佩奥 罗伯特马龙博士
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1835837/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1835965/)
 
-G-TV视频链接：[https://gtv.org/video/id=61d95154dffab035958c2d6d](https://gtv.org/video/id=61d95154dffab035958c2d6d)
+BY:[秘翻新闻](https://gtv.org/broadcast/watch/61d954ea2591020829849261)
 
-**郭文贵先生：**兄弟姐妹们，咱们新中国联邦记住，从今天起，不仅能让你灭共，还让你发财，还让你有尊严，还让你“水”多，不分男女，不分老少，这句话不夸张吧？这不夸张。你笑什么？这小新你笑什么？共产党就是剥夺了你说真话的能力，这是洗脑的第一步。Eglise，你们都同意吧？玛丽雅？我们在中国，文紫、文霄、拥抱太阳，谁敢说这话题呀？（会被说）你是流氓啊。
+**2022-01-08**
 
-共产党的张高丽还有常委说：“我是宇宙，你们是一粒沙”，他叫浪漫，我搞小二、小三叫浪漫；我们老百姓谈谈人的本性、爹娘给的性本能，这叫黄色，甚至是流氓啊。我们为什么不能谈这个话题呢？谁剥夺了我们谈这个话题（权利）呢？我们伤害谁了？ Eglise水多，你们家水少了，是吗？共产党的逻辑是：你水多，我家水就少了，所以说你就不能谈水多的事儿。
+**1. 蓬佩奥1月8在盖特发文：** 美国公司将把中共的宣传强加给世界。习近平非常高兴他将有连续两个星期的时间，来宣传他带领的中共有“多么伟大”。
 
-谁不让我们谈的？为什么不能谈？我们只有医生谈出来让大家才知道，就刚才拥抱太阳说“你水多水少是你的精神决定的，是你的环境决定的，是你内心决定的”，不是别人给你浇一盆水来的，或你水多水少不是水龙头，共产党员就（让）生孩子一样，我一舀水就多，我一关水就少，我让你生一个你就生完，你生仨就生仨。它真不是的，这就是人性啊。
+[https://gettr.com/post/pmzvhxc291](https://gettr.com/post/pmzvhxc291)
 
-新中国联邦今天，你看下午，2022年一踏入进来就是水年，今年是水年，壬水之年，老虎壬寅之年，壬寅，叫天水呀，哎哟，这个不得了，今年是水年，咱就以水开始的，多吉利呀这事啊。而且是天下之什么？这叫做天汪之水，什么叫水？就是人类生存下来就三个条件，太阳、水、土地就是我们的空气嘛，就这三样，碳水化合物嘛，人体就是碳水化合物，你没水了，你活着干啥呀？
+**2. Andy再开 1月7日在盖特发文：** 蓬佩奥1月6日在接受福克斯主持人劳拉·英格拉哈姆 (Laura Ingraham)采访时说：“我在此呼吁抵制北京冬奥委会，北京冬奥委会将被冠上‘种族灭绝’冬奥委会的头衔。同时不该忘记中共病毒来自武汉病毒研究所。中共一定会监视去北京参赛的所有运动员，并利用他们的言行为中共做宣传。一旦运动员说了天安门事件或者武毒所，大概率就回不了国了。应当在香港事件、维吾尔人被种族灭绝、中共病毒等每一件事上对中共追责。习近平将坐在恢宏的体育馆里宣布其抗疫成功，但背后是将其人民焊死在家里。习近平不在乎美国的外交抵制，因为全球的各家媒体将在开幕式上把他推到世界舞台上。”
 
-字幕来源：[2022年1月1日文贵大直播元旦特别节目“正道至善，除恶建邦”全文字版（三）](https://gnews.org/zh-hans/1817244/)
+[https://gettr.com/post/pmsvqq25ca](https://gettr.com/post/pmsvqq25ca)
 
-编辑整理：Jacques；
+3. **《国家脉动》1月8日在盖特发文：** 一位医生告诉英国卫生大臣赛义德·贾维德（Sajid Javid）说，没有足够强大的科学依据来支持执行疫苗强制令。 【盖文转报道，在伦敦国王学院医院 (King’s College Hospital)担任麻醉师顾问的史蒂夫·詹姆斯（Steve James）博士，在被贾维德问及他对英国政府要求国民医疗服务体系的工作人员接种新冠疫苗的看法时表示：“我对此很不满意。我曾经感染过新冠病毒，现在有了抗体。我没有接种新冠疫苗，也不想接种。英国政府的规定说如果我不接种疫苗就会被解雇，我不认同此观点，因为支持疫苗接种的科学证据还不够强大。”】
 
-字幕文件制作：小满；
+[https://gettr.com/post/pmyn4yf866](https://gettr.com/post/pmyn4yf866)
 
-视频制作及上传：Cindy；
+**4. 罗伯特马龙博士1月8日在盖特发文：** 大科技、审查制度以及社会主义。 马龙博士在接受《大纪元》采访时表示，在被推特禁言后，他别无选择，只能坚持继续揭露真相。 【盖文转《大纪元时报》报道，马龙博士1月5日在接受大纪元电视台的“美国思想领袖”节目采访时说：“我感到自己正在被道德所驱使，我需要谈谈我所观察到的情况。我可能是极少数对mRNA技术有如此深入了解而又没有直接经济利益冲突的人之一。如果不允许我说出我的担忧，那么谁才是参与对话的有效人选呢？”马龙说，由于他公开反对疫苗强制令和给儿童强制接种新冠疫苗，他的推特和领英账户被先后冻结。“我们别无选择，只能继续坚持下去。我当然更愿意回到我的农场，与妻子一起闲逛，但这将让我放弃现在作为这个全球领导人之一所应承担的责任。对我来说，更重要的是帮助人们获得数据，学会自己思考并提出自己的意见。我并不想告诉人们该怎么想，我只想帮助他们思考，并给他们提供工具。”】
 
-G-News发布：小满；
+[https://gettr.com/post/pmwyt18523](https://gettr.com/post/pmwyt18523)
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+**5. 罗伯特马龙博士1月8日在盖特发文：** 大力推广辉瑞新冠疫苗加强针的国家没能遏制奥米炕变种的传播，并打破了感染人数记录。 【盖文转《Trial Site News》报道，奥米炕变种正在以色列肆虐。1月5日，该国新增了17362个新冠病例，创下了大流行以来的最高纪录。据报道，以色列政府开始给人们接种第四针疫苗。但历史事实证明，大规模接种疫苗的策略无法遏制和消除新冠病毒。这一策略是由监管机构的管理人员、精英医疗机构的官员、国家和国际公共卫生机构、精英学术医疗中心和工业界共同推动的，那些从大流行病中大发横财的金融家和投资者以及有影响力的非营利组织也参与其中。】
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+[https://gettr.com/post/pmzjdo57f4](https://gettr.com/post/pmzjdo57f4)
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+**6. 《网关专家》1月7日在盖特发文： **澳大利亚一位没有任何基础疾病的23岁举重冠军在接种了两剂新冠疫苗后死亡。 【盖文转报道，这为运动员名叫詹姆斯·康迪尼奥斯（James Kondilios），居住在堪培拉，因新冠病毒并发症于 1 月 4 日在圣文森特医院去世，去世之前没有任何已知的潜在健康问题。他的死亡引发了一个问题，疫苗是否发挥了作用？这完全颠覆了疫苗可以保护人们免受病毒感染的整个说法。】
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+[https://gettr.com/post/pmwdnp96fb](https://gettr.com/post/pmwdnp96fb)
 
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+**7. Disclose.tv 1月8日在盖特发文：** 荷兰政府隐瞒了过高的死亡率数据。科学家们现在批评政府仍然没有公布独立调查的数据。 议会一致呼吁进行独立调查，以检查“超高死亡率的异常情况”。但数据仍然没有被公布。
 
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+[https://gettr.com/post/pmzjb58ada](https://gettr.com/post/pmzjb58ada)
 
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+**8. Disclose.tv 1月7日在盖特发文：** 德国颁布了新的防疫限制令：接种了两剂新冠疫苗的人未经核酸测试不得进入咖啡馆和餐馆。接种了加强针的人不需要测试。
 
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+[https://gettr.com/post/pmwsxe8d93](https://gettr.com/post/pmwsxe8d93)
 
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+**9. 纽约香草山医疗部1月7日在盖特发文： **香草山医疗部的文紫医生，在《GTV新闻访谈》节目中讨论了为什么新冠病毒的最新变种IHU会引起这么大的恐慌？这是因为它有巨大的突变。奥米炕变种有46个突变再加37个基因缺失，基因缺失也属于一种缺失突变。但新变种IHU的突变数量比奥米炕还要多。 在观察一个感染了IHU变种的患者后发现， IHU引起了氨基酸的改变。IHU在刺突蛋白这个位置就有14个氨基酸的置换。所引起的氨基酸突变，包括N501Y和E484K这两个突变。这两个突变在其他菌株里也都发现了，比如说N501Y在Alpha, Beta, Gamma里都有。病毒蛋白N501Y可以帮助病毒更加紧密的铆钉在体内的受体上。病毒蛋白E484K可以改变自己的形状，然后阻止中和抗体的作用，这种突变极有可能使疫苗根本不起作用，而且对人体的免疫起什么作用不可知晓。
 
+[https://gettr.com/post/pmu7et8267](https://gettr.com/post/pmu7et8267)
+
+**10. 真正美国之声1月8日发推说：** 美国保守团体“就业创造者网络（Job Creators Network）”和全美各地的企业将于1月8日向最高法院提出诉讼，反对总统拜登对企业的疫苗强制令，一位原告称该命令会让小企业的生存愈发艰难。 【推文转报道，就业创造者网络的总裁兼首席执行官阿尔弗雷多·奥尔蒂斯 (Alfredo Ortiz)在一封电子邮件中说：“最高法院可以遵循先例，立即停止拜登政府针对雇主的疫苗强制令，从而保护全国的小企业。政府这种前所未有的越权行为将在最糟糕的时候让企业的成本负担加重，并加剧劳动力短缺和供应链危机。”原告之一、明尼苏达州劳伦斯运输公司的首席执行官埃里克·劳伦斯（Eric Lawrence）认为法院的裁决将影响供应链：“我的运输公司已经面临着历史性的劳动力短缺，正在努力招聘足够的商业卡车司机和技术人员，以确保车队能正常运行。如果实施疫苗强制令，我将再失去10%到15%的员工。“泛金澳烘焙公司（Pan-O-Gold Baking Company）的总裁霍华德·阿尔顿（Howard Alton）说：“政府没有理由打着遏制疫情的口号，以违宪的方式过度扩张，压迫小企业。我们是美国经济的心脏，国家不应切断我们的膝盖。”】
+
+
+
+> Jobs Creators Network and businesses across the country will plead their case on Friday to the Supreme Court against [@POTUS](https://twitter.com/POTUS?ref_src=twsrc%5Etfw) [@JoeBiden](https://twitter.com/JoeBiden?ref_src=twsrc%5Etfw)'s business vaccine mandate, which one plaintiff calls a "sucker punch" to small businesses.[https://t.co/72tm7OUSJz](https://t.co/72tm7OUSJz)
+> — Real America's Voice (RAV) (@RealAmVoice) [January 7, 2022](https://twitter.com/RealAmVoice/status/1479589916887724037?ref_src=twsrc%5Etfw)
+
+
+
+**11. 印太新闻 – 关注中共威胁 1月8日发推说： **台湾军方模拟演练城市战争。 为了使战争场面更加真实，他们在建筑物上悬挂了显示真实连锁店名称的横幅。 【推文转《台湾英文新闻网》报道，面对来自北京日益加大的军事威胁，台湾军方1月6日在南部城市高雄附近的一个训练中心举行了一次由步兵和装甲车辆参与的模拟巷战。训练场地700多平方米，有26栋大小不一的建筑。红蓝两派的士兵在一场模拟战斗中对峙，从房屋和沙袋路障中向对方开火，为争夺每条街道和每栋房子“战斗”。据军方称，为了使战争场面更加逼真，他们在建筑物上悬挂了显示真实连锁店名称的横幅。城市战成为台湾军方日益重要的训练科目。】
+
+
+
+> Taiwan Army practices urban warfare 
+> 
+> To make war scenes more realistic banners were suspended from buildings showing names of real chain stores [https://t.co/6ayfCo8d2D](https://t.co/6ayfCo8d2D) [pic.twitter.com/Wql5ni12Mo](https://t.co/Wql5ni12Mo)
+> — Indo-Pacific News – Watching the CCP-China Threat (@IndoPac\_Info) [January 7, 2022](https://twitter.com/IndoPac_Info/status/1479507192927916032?ref_src=twsrc%5Etfw)
+
+
+
+**12. 比尔格茨1月8日发推说：** 承认从孟山都（Monsanto）窃取商业机密的中国科学家曾是北京“百人计划”的一部分，“百人计划”也被称为“千人技术盗窃计划”。 【推文转《华盛顿时报》报道，中国科学家向海涛1月6日在美国联邦法院承认，他在为孟山都公司及其在密苏里州的一家子公司工作时窃取了商业秘密。他被中共政府招募加入其外国间谍计划，该计划招募那些能够接触到中共寻求的外国商业机密和技术的人。检察官在一份新闻稿中说，向海涛将窃取的商业机密转移到一张存储卡上，然后试图将其带到中国，帮助中共政府利用美国专有的商业技术系统以提高农业产量。向海涛前往中共国后，在中国科学院土壤科学研究所工作。他在2019年11月返回美国时被逮捕。】
+
+
+
+> Chinese scientist convicted of stealing Monsanto trade secrets, an advanced farming tool, was part of Beijing’s Hundred Talents Progam, also known as Thousand Talents tech theft program [https://t.co/LfozJh859E](https://t.co/LfozJh859E)
+> — Bill Gertz (@BillGertz) [January 8, 2022](https://twitter.com/BillGertz/status/1479644303970295811?ref_src=twsrc%5Etfw)
+
+
+
+**13. 郭文贵先生在1月7日的大直播中说：** 推行强制疫苗政策的国家都是由一个政党控制了政府和立法机构，用同一套路推广疫苗，所有疫苗厂商都不负责；防范病毒比解药更重要；民意决定了强制疫苗在美国行不通。疫苗强制令在今年5月前必被灭。只有郭文贵说西安是疫苗灾难。中共会用冬奥会吹牛，但冬奥会结束后就会被疫苗灾难和国内乱局打脸；病毒被释放后必定失控，请多保重。中共高官无人敢谈文贵、新中国联邦和爆料革命，我们和中共的较量是正邪之战；从文贵7岁时的照片看中共内斗的流氓逻辑；文贵还是孩子的时候就怀疑中共的GDP造假。
+
+[https://gettr.com/post/pmz8m96bc4](https://gettr.com/post/pmz8m96bc4)
+
+[https://gettr.com/post/pn0c7yb30c](https://gettr.com/post/pn0c7yb30c)
+
+[https://gettr.com/post/pn0f7e01e3](https://gettr.com/post/pn0f7e01e3)
+
+**以上社交媒体新闻由 巴拉克和Stephanie 联合编译报道**
+
+发布：陸柒陸捌
+
+* * *
+
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
