--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,22 +1,46 @@
 ---
-title: 日澳签订互惠准入协议以“应对崛起的中共国”
+title: 高僧大德者都是自食其力而达赖喇嘛却没看清自己的问题
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1835822/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1835937/)
 
-撰稿：文西Eric
-![](https://assets.gnews.org/wp-content/uploads/2022/01/801.jpg)图片来源于网络
-据澳洲天空新闻网（Sky News）报道，澳大利亚总理斯科特-莫里森和日本首相岸田文雄今天将在一次视频会议上签署两国之间的《互惠准入协议》，被称为该地区的一个关键性时刻。
+**郭文贵先生：**大师这人不懂电脑、不懂科技，还给我们讲这话，你知道有多神奇吗！还有一个他更重要的事情，他说我见过真正的高僧大德，从来不要一分所谓的奉献，他说我从小到大，我靠我徒弟我都没让他给我弄过一粒粮食，他说我修行的最大的修行，就是我到现在自食其力。
 
-澳大利亚战略政策研究所的马尔科姆-戴维斯博士说，该协议使澳大利亚和日本能够 “在对方的军事基地中部署其军事力量”，使双方军事力量能够在印度-太平洋地区更广泛的地区开展行动。
+他在武当山，他说文贵你知道什么叫昆仑山脉？什么叫巽山？什么叫垦山？大家知道吗？垦山是什么？巽山是什么，巽山就是风，风就是巽山，大家我都不愿跟你们讲这个，啥叫金木水火土风水呀？为什么有武当山？为什么有南普陀山？为什么有武夷山？为什么有今天的嵩山？中岳嵩山。为什么有我们的所谓的昆仑山？峨眉山？你说山脉咋来的呢？
 
-“从技术层面来看，这是向前迈出的重要一步，但在战略层面，我认为它标志着东京和堪培拉之间更密切的防务关系。它大大加强了日本在该地区的作用，而在过去，日本受其二战后宪法的限制，特别是第九条规定，不能如传统的国防力量那样使用武力。”
+所有的山，就是中国一个人文的历史，就是有些把隔断了…有些人在噩梦中，你就待着恶梦里，永远不要回来，就是人自杀的人和杀人，你就呆在恶梦里，被放在了整个的山脉之下。有些人为什么从南普陀升起来了？因为它要有任务，他要完成任务。你会醒来发现你舒服的在你家床上。
 
-戴维斯博士说，此举标志着日本正在成为一个 “正常的国防大国”，并与澳大利亚更紧密地合作，以 “威慑和应对崛起的中共国”。
+就现在钟仁去拥抱母亲父亲的时候，你拥抱一次，你相信我，你身体好一次，你谁拥抱你的家人、父母、兄弟姐妹，一定七哥..绝对没有任何…我没有任何，像那些欺民贼似的都为了捐钱啥的，包括我在这穿衣裳，我就是要告诉你，什么叫正道，你拥抱你家人、你朋友时，你会好一次，绝对比你不拥抱好得多，你想健康，你想风水，你想顺…要爱别人，别爱自己超过了爱别人，爱别人时候就会爱自己。
 
-新闻链接：[Sky News Australia](https://www.skynews.com.au/australia-news/defence-and-foreign-affairs/reciprocal-access-agreement-between-japan-and-australia-to-respond-to-rising-china/video/2e7279b511aaad69bc2abad2743ad2dd)
+这是我看到的高僧大德当中、一生当中，绝对没要任何伸手的，我为啥我信呐？
 
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+达赖喇嘛，他说达赖喇嘛一生当中不能自食其力，达赖喇嘛最回去去武当山去他那儿。他说一生当中，他说达赖喇嘛没看清自己的问题，西藏人没有把自己的生活解决下，他说你永远会被别人解决。哇~塞！这话说的太好了！西藏人所有的佛教，如果还靠大家来捐赠、黄金、死人不在乎，那时候你永远不会被解救。
+
+所以我服他、我信他、我更相信他，人生就是黄粱一梦。我们要在黄粱一梦里边儿，变成我们的仙梦，人生是仙梦一场，否则，你就变成了黄粱一梦。
+
+编辑整理：海贼王M.D.LUFFY；
+
+G-News发布：海贼王M.D.LUFFY；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们——**[**日本银河系农场Discord群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：日本银河系农场。
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
