--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,51 +1,23 @@
 ---
-title: 2022年1月8日新闻集
+title: 5725万剂次，北京平均每人接种3.5针毒疫苗
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1835810/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1835906/)
 
-撰稿人：文远Bruce
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片PPT变PNG.jpg)
-2021.9.8 七哥：“假画神仙图最大的作用就是赋予张艺谋奥运会开幕式的灵感。
+撰稿：东京樱花团/盐和光
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2-25.jpg)[图片来源](https://www.bbc.com/zhongwen/simp/chinese-news-56737307)
+1月8号北青网报道，根据北京市卫健委刚刚发布的消息，截至2022年1月7日，北京市累计报告接种中共病毒（新冠病毒Covid-19）疫苗5725.15万剂次，累计接种2247.80万人。
 
-这儿还有一个大卷呢，这个卷我告诉你，它最大作用是什么，你知道吗？当时陈丹青、张艺谋、所有的奥林匹克委员会小组到我家吃饭。我在地下室铺开这卷给他们看，陈丹青说：“这个是做得很漂亮。”
+北京简称“京”，古称燕京、北平，是中共国的首都。2021年人口普查北京总人数：全市总人口（常住人口）为2189.3095人，而累计接种2247.80万人，接种人口已超出全市常住人口60万，接种新冠病毒疫苗5725.15万剂次，北京平均每人接种3.5针。
 
-张艺谋顿时灵感来了：“文贵我有灵感了，这个将拿为奥运会的《卷》”。“啪”一打开。我这个卷这么大，几十米，在我家地下室“咵”一打开他傻了，奥林匹克的《开卷》之创意就来自我们家，或者跟我有关。就这个卷，大家明白了吗？未来我讲奥运会开幕式的故事，那多了去了，包括那火炬为啥放那儿，风水定位郭文贵定的，原来不在那儿，这人都活着呢，你可以去问去。 **这个卷“咵”一打开《神仙图》，“咵咵咵” 一看–后来就出来了中国历史长卷，就这么来的**。”
+中共病毒是血液和呼吸系统传播的病毒，中共毒疫苗就是通过注射传播的血液病毒，打一针中共病毒疫苗就像是打一针艾滋病毒针一样，刺突蛋白里包含艾滋病基因片段，毒疫苗没有通过动物试验。在动物试验阶段，所有动物100%死亡，试验老鼠2个月内100%死亡，然后试验猴子，也是100%死亡，打完疫苗之后它随着血液扩散到全身，最后到达微细血管，微细血管本身就很狭窄，刺突蛋白诱发免疫系统攻击血管壁细胞，导致微细血管进一步变窄和阻塞，无法输送携氧红血球，组织缺氧、发炎、坏死，平均每人三针半的剂量，中共病毒和毒疫苗将要屠城，以后的北京人将要濒临灭绝。
 
-1.张艺谋任冬奥会开幕式总导演
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide2-1.jpg)
-2.北约呼吁哈萨克斯坦冷静
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide3-2.jpg)
-3.中共习近平贼喊捉贼
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide4-2.jpg)
-4.哈萨克斯坦的屠杀
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide5-4.jpg)
-5.美国国会议员质疑民宿短租平台Airbnb在新疆开展业务
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide6-4.jpg)
-6.中共公布2021年12月末黄金储备6264万盎司 Vs 2012年12月31日 美国财政部宣布拥有2.61亿盎司黄金储备(以1800美元/盎司算的话，美国黄金储备价值4800亿美金左右)。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide7-2.jpg)
-7.解阿根廷加息2%（图为阿根廷比索月线图）
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide8-2.jpg)
-8.解直锟遗留中植集团旗下的四基金合并。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide9-2.jpg)
-9. 机器人技术前沿
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide10.jpg)
-10.南非上网
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide11.jpg)
-11. 免费观看视频的电视频道集
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide12.jpg)
-12.青海发生6.9级地震
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide13.jpg)
-13.澳大利亚新洲感染人数破4万
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide14.jpg)
+消息来源：
 
+[【北京累计报告接种新冠疫苗5725.15万剂次】](https://t.ynet.cn/baijia/32022705.html?sdkver=2c9d920d)
 
-编辑：云彩
-
-[欢迎加入【澳喜农场】](https://discord.com/channels/712986898376949760/713012519274283078/776438234401996840)
-
-【[澳喜文章1](https://gnews.org/zh-hans/author/aujenny/)】
-【[澳喜文章2](https://gnews.org/zh-hans/author/himalaya-australia/)】
-![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
