--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,36 +1,51 @@
 ---
-title: 美国医学协会谴责CDC新隔离指南
+title: 2022年1月8日新闻集
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835804/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1835810/)
 
-作者：纽约香草山文艺部 – 宁文静
-![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
-1月5日，美国医学协会AMA指责美国疾病控制和预防中心，发布了“混乱的”和“适得其反的”新冠病毒检疫和隔离新指南。
+撰稿人：文远Bruce
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片PPT变PNG.jpg)
+2021.9.8 七哥：“假画神仙图最大的作用就是赋予张艺谋奥运会开幕式的灵感。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/6-4.png)
+这儿还有一个大卷呢，这个卷我告诉你，它最大作用是什么，你知道吗？当时陈丹青、张艺谋、所有的奥林匹克委员会小组到我家吃饭。我在地下室铺开这卷给他们看，陈丹青说：“这个是做得很漂亮。”
 
-该委员会主席杰拉尔德·哈蒙博士在一份声明中说，美国人民应该得到及时、准确和明确的指导。相反，CDC的新建议不仅令人困惑，而且加大了传播病毒的风险。隔离和检疫期从原先的10天缩短到5天，将增加数十万人在工作场所和学校受到感染的风险。
+张艺谋顿时灵感来了：“文贵我有灵感了，这个将拿为奥运会的《卷》”。“啪”一打开。我这个卷这么大，几十米，在我家地下室“咵”一打开他傻了，奥林匹克的《开卷》之创意就来自我们家，或者跟我有关。就这个卷，大家明白了吗？未来我讲奥运会开幕式的故事，那多了去了，包括那火炬为啥放那儿，风水定位郭文贵定的，原来不在那儿，这人都活着呢，你可以去问去。 **这个卷“咵”一打开《神仙图》，“咵咵咵” 一看–后来就出来了中国历史长卷，就这么来的**。”
 
-医生们认为目前需要进行更多的研究，以确定奥密克戎的严重程度和逃避免疫反应，以及疫苗的保护力，但这些建议可能进一步令卫生保健系统不堪重负。哈蒙博士同时敦促政府，尽一切能力加强检测盒的可用性。但测试盒的匮乏并不能成为缩短隔离期的理由。 虽然CDC强调更改指南的原因是研究表明，病毒传播一般在发病前1-2天和发病后2-3天。但评论人士指出，隔离期缩短为5天跟多个领域出现的人员短缺有关，社会运转的基本功能正面临着严重问题。
+1.张艺谋任冬奥会开幕式总导演
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide2-1.jpg)
+2.北约呼吁哈萨克斯坦冷静
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide3-2.jpg)
+3.中共习近平贼喊捉贼
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide4-2.jpg)
+4.哈萨克斯坦的屠杀
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide5-4.jpg)
+5.美国国会议员质疑民宿短租平台Airbnb在新疆开展业务
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide6-4.jpg)
+6.中共公布2021年12月末黄金储备6264万盎司 Vs 2012年12月31日 美国财政部宣布拥有2.61亿盎司黄金储备(以1800美元/盎司算的话，美国黄金储备价值4800亿美金左右)。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide7-2.jpg)
+7.解阿根廷加息2%（图为阿根廷比索月线图）
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide8-2.jpg)
+8.解直锟遗留中植集团旗下的四基金合并。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide9-2.jpg)
+9. 机器人技术前沿
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide10.jpg)
+10.南非上网
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide11.jpg)
+11. 免费观看视频的电视频道集
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide12.jpg)
+12.青海发生6.9级地震
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide13.jpg)
+13.澳大利亚新洲感染人数破4万
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide14.jpg)
 
-参考链接：
 
-- [CDC’s new COVID-19 isolation guidance called out by American Medical Association](https://www.foxnews.com/health/cdc-covid-isolation-guidance-called-out-american-medical-association)
+编辑：云彩
 
+[欢迎加入【澳喜农场】](https://discord.com/channels/712986898376949760/713012519274283078/776438234401996840)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
-
-总编：文特
-编辑：Kathy文艺
-校正/发稿：海阔天空1
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+【[澳喜文章1](https://gnews.org/zh-hans/author/aujenny/)】
+【[澳喜文章2](https://gnews.org/zh-hans/author/himalaya-australia/)】
+![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
