--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,52 +1,50 @@
 ---
-title: 风水是德行的标准是人在社会上和大自然相处的一个地位
+title: 澳23岁双重接种的举重冠军死于COVID-19
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1836022/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836117/)
 
-G-TV视频链接：[https://gtv.org/video/id=61d95648dffab035958c2e62](https://gtv.org/video/id=61d95648dffab035958c2e62)
+翻译： Jenny Ball
 
-**郭文贵先生：**人的命不是天注定，人的命是一定记住自己来决定的。我举个最简单的例子，说这个人运特别好，他生下来就是当官的命，你把他送到监狱去，你看看他还能当官吗？不可能的。分分钟就可以改变，人的命是就在你手里边，环境改变。如果他说他我就是当官命，送到阿富汗去，他不想当官他想吃粮食。大环境决定了一个你个体在环、大环境面前什么都不是，地球都没了，没有人命运的好，没有什么官运、财运、境运。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-494.png)图片来源 :thegatewaypundit.com
 
-我告诉你一定要记住，人的选择是第一的，就你做每件事情都是你的选择，而且你选择里边就是你的风水带来的，所有的风水就是你的德行，就你人的本性。绝不可能有任何德性不好的人，说我现在我命特别好，我告诉你命好，不是你想当上官、发了财就好。
+根据一份报告，一名 23 岁的科学家、举重冠军和健康运动员在检测出 Covid-19 呈阳性后，在悉尼一家医院死亡。
 
-有人是老天就用钱，像马云，就虐待他，儿子脑开瓢，老婆几次癌症，他现在失去了全家的自由。马云你看，他能有长岛哥幸福吗？他没有的。有的人要当官，张高丽当这么都成了副国级了，现在“宇宙无限大，地球一粒沙”，生不如死，权力、金钱可能也是惩罚你的方式。
+詹姆斯·康迪利奥斯（James Kondilios）是堪培拉的居民，在因病毒并发症于 1 月 4 日在圣文森特医院去世之前，已知他没有任何潜在的健康问题。
 
-你先说你的风水，你的成功就刚才你讲这些事情，这在生命中根本不算什么事是吧？你缺的就是一件事情，你先把你自己的德性和你对人生的看法的高度，和你认为确定你喜欢和成功的标准定下来，你就对风水这个事重新定义。
+在新南威尔士州卫生当局透露他的身份后，他的家人和朋友都在哀悼并表示敬意。
 
-风水就是一个人的德行的标准，就是一个人在社会上和大自然相处的一个地位，绝不是金钱，也不是拥有多少女人、多少来名利来控制的，但你看明白之后，你会把你所有你刚才谈的什么，都是小事，什么坟地……
+他的一位朋友在 Facebook 上发布了一条情感信息作为致敬：
 
-我告诉你，坟地你理解以后，你会知道坟地是干啥的。坟地是有灵（魂），有一些没升到天的灵魂和没有投胎的灵魂凝聚之地，是很腌臜的地方，但是腌臜里面一定它也有不同的层次。你看到这些都是小儿科，这都是太小的了，我可以给你搞好多好多实验，会让你彻底改变。
+（更新 – 致敬后来被删除）
 
-就是说明你对社会和人性和地球的认知还不能解释你现在所有人生面对的十之八九不如意。还有一些你根本对世界的认知，你真的是宇宙那么大和地球一粒沙那么个差距，你认知太少了，你认知多少这都不算。提高你的知识，提高你的德行，提高你的标准，这些都是小事，这就是答案，风水即知识。
+“非死不可”说发文已不可访问
 
-字幕来源：[2022年1月1日文贵大直播元旦特别节目“正道至善，除恶建邦”全文字版（三）](https://gnews.org/zh-hans/1817244/)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-496.png)图片来源 :thegatewaypundit.com
 
-编辑整理：Jacques；
+他最近的死亡提出了一个问题，如果他因为接种了双重疫苗，并且没有潜在的健康状况，但受到保护免受 COVID-19 病毒的疫苗的侵害，那么会发生什么？这打破了疫苗将保护您免受病毒侵害的整个说法。
 
-字幕文件制作：小满；
+福奇博士、药企，企业媒体和公共卫生机构，从一开始就一直在对 Covid 撒谎。
 
-视频制作及上传：Cindy；
+**他们说疫苗会阻止病毒传播**。
 
-G-News发布：小满；
+**他们说接种疫苗的人可以不戴口罩。**
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+**他们说接种疫苗的人不会重病。**
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+**他们说接种疫苗的人不会死亡。**
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+任何还在信任专家的人都应该得到他们的帮助。我们从一开始就试图用理智、逻辑，和实际统计数据，与他们进行这场对话，**我们应该为我们失去的自由、时间和财富而得到补偿。**
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+医疗行业、公共卫生行业、学术界和政府的合法性已被 Covid 抹去。在“卡内科亚大帝” (KanekoaTheGreat)的这段视频汇编中观看他们的谎言。
 
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+新闻来源 :[thegatewaypundit.com] [Double Vaccinated 23-Year-Old Powerlifter Champion with No Underlying Health Condition Dies from COVID-19 in Australia](https://www.thegatewaypundit.com/2022/01/double-vaccinated-23-year-old-powerlifter-champion-no-underlying-health-condition-dies-covid-19-australia/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
 
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+* * *
 
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
