--- a/gnews/44.md
+++ b/gnews/44.md
@@ -1,50 +1,11 @@
 ---
-title: 维多利亚州记录了创记录51,356例新病例
+title: 塞耶博士：无论冷战热战, 美国都有能力且赢得对中共的战争
 ---
-`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1835436/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1835536/)
 
-**【雅典娜快讯】，紧贴时代脉搏**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-477.png)图片来源：Newspostalk
-**整理报道：文泓**
+12/30/2021 塞耶博士：我们现在正处在与中共的冷战中。但如果我们现在不采取措施打败他们，不大大加强我们在印度洋、太平洋地区和世界其他地方的存在，不参与他们对我们进行的，本应是我们向他们进行的意识形态战争，并确保中共不再能够进入我们的资本市场，确保贸易有利于我们，而不是中共国；我们从全球贸易中获得相对收益，而不是中共。所以还需要很多的努力。但这是一场战争，无论它是冷战，还是热战，美国都可以而且会赢得对他们的战争
 
-当地时间1月8日，近一周的快速抗原检测纳入每日数据后，澳大利亚维多利亚州在过去24小时内记录了庞大的51,356例新增病例和9例新冠病毒死亡。
-
-截至周六早上，维州医院共有731名感染者，其中109人在重症监护室，22人在呼吸机上。在过去的24小时内，有9人死于该病毒。
-
-周六的总病例数是周五的两倍多——**这是迄今为止大流行期间任何州记录的最高单日病例数**，这要归功于快速检测。在新病例中，通过快速抗原检测记录了26,428例，通过PCR检测记录了24,928例。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-478.png)图片来源：Covid 19 Data（当前各州疫情数据变化）
-
-“我们不希望维州人认为病毒传播一夜之间翻了一番”，州卫生部长马丁·弗利说：“根据我们现在在系统中形成的周未报告的数据，（新增）数字肯定显著飙升。”
-
-弗利先生说，包括快速抗原测试使该州能够更准确地了解总体数字以及应该在哪里分配资源。他补充说，随着过去一周的报告不断涌入，自我报告系统将需要一些时间来反映前一天的真实病例数。
-
-大多数报告快速抗原检测呈阳性的人，在本周早些时候得到了这个结果，并在周五州卫生部门的网络表格打开时报告了这个结果。
-
-维多利亚州是第一个建立报告系统的大陆州，在该系统中，**任何检测出快速抗原检测呈阳性的人现在都被视为可能感染****新冠病毒****，必须立即隔离****7****天并通知他们的接触者**——就像那些在PCR检测呈阳性的人一样（参加）测试。
-
-必须通过周五开放的在线门户或电话向卫生部报告阳性快速检测结果。目标是确保人们在测试中心花费更少的时间，并专注于隔离和从感染病毒中恢复。
-
-这也意味着在快速抗原测试的检测结果为阴性，且不是家庭接触者的维州人将能够立即恢复生活，而不是在等待阴性结果时进行隔离。
-
-此前，维多利亚州在周五记录了21,728例病例和6例死亡病例，并且新规则生效以应对奥密克戎变种病毒的传播。
-
-根据修订后的限制，维多利亚州的营业场所将被要求保持每2平方米1个人的密度限制，以限制新冠病毒的传播。
-
-重返办公室的时间也将延长，“强烈建议”维州人继续在家学习和工作，直到澳大利亚国庆日。
-
-目前，维州18岁以上超过15%或800,000人接种了第三剂疫苗，超过93%的符合条件的维州人都接种了疫苗。
-
-新闻链接：[Covid Melbourne cases: Victoria records 51,356 new infections, restrictions, rapid tests | news.com.au — Australia’s leading news site](https://www.news.com.au/national/victoria/news/victoria-records-51356-new-cases-nine-deaths/news-story/5d72d74f0121dd8b7bbc29566cd4a513)
-
-*发布：盘古相聚*
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
