--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,21 +1,46 @@
 ---
-title: 为何有脱北者选择回朝鲜？
+title: 保护制药公司疫苗免责是COVID疫苗犹豫的最大困惑之一
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836003/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836095/)
 
-撰稿：东京樱花团/上善若水
-![](https://assets.gnews.org/wp-content/uploads/2022/01/3-11.jpg)（图片来源于本文链接）
-在刚刚过去的元旦，一名2020年11月穿越非军事区进入韩国的脱北者循相同路线重回朝。此事引起韩国社会的广泛讨论。此事件被韩媒称为“回力镖叛逃”。韩国媒体批评军方守卫松散，玩忽职守. 一般而言，通过非军事区（DMZ）叛逃的情况极为罕见。在这个长达248公里，宽约4公里的边境地带，除了设有铁丝网外，两侧都有重兵把守，更设置了地雷和坦克陷阱。每当有人设法穿越非军事区而且未被察觉，韩国军方便会受到公众的强烈质疑与批评。韩国军方为此事道歉，韩国联合参谋本部议长元仁哲表示：“我对于这起事件感到非常抱歉。我承诺尽一切努力确保类似事件不再发生。”韩总统文在寅已下令对军队的整体安全布局进行特别检查。
+翻译： Jenny Ball
 
-韩民众疑惑为何脱北者会选择回到一个生活极为艰难的国度，至少在外人的眼里是如此。据报道，该名返朝的脱北者只能做“门卫”，为了生计而挣扎。负责协助脱北者适应韩国社会的统一部则强调，除了金钱补助外，该名男子在寻找住宿和求职时都获得帮助，而享有医疗福利。尽管如此，在迄今逃往韩国的3万多名脱北者中，至少30人在过去10年间选择重返朝鲜。每个人回朝鲜的理由都不同。“有人觉得在这里保住工作很难；有人因为思念当地的亲人；还有人无法适应文化差异、难以适应韩国生活；有人不能通过文凭考试，迫不得已只能在餐厅打工；或是觉得受到歧视。”
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-491.png)图片来源:lifesitenews.com
 
-信息来源：
+华盛顿特区生活新闻（LifeSiteNews） – 在圣诞节后的两条推文中，美国肯塔基州众议员托马斯·马西（Thomas Massie）强调了对新型 COVID-19 疫苗持续不信任的一个关键原因：联邦规则保护制药公司，为他们的产品在某些条件下的缺点后果免责。
 
-[为何有脱北者选择回朝鲜？](https://www.dw.com/zh/%E4%B8%BA%E4%BD%95%E6%9C%89%E8%84%B1%E5%8C%97%E8%80%85%E9%80%89%E6%8B%A9%E5%9B%9E%E6%9C%9D%E9%B2%9C/a-60359568)
+根据国会研究服务 (CRS) 的规定，2005 年联邦公共准备和应急准备 (PREP) 法案，“授权卫生与公众服务部 (HHS) 限制与医疗对策管理相关的损失的法律责任，例如， 诊断、治疗和疫苗。” 在 2020 年 COVID-19 爆发之初，**HHS ****援引该法案宣布，该病毒为****“****突发公共卫生事件**”。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+国会研究服务解释说，在这种“全面”豁免下，联邦政府、州政府、“所涵盖的对策的制造商和分销商”，以及分发这些对策的有执照，或以其他方式授权的卫生专业人员，免受这些对策引起的“所有损失索赔”，除因“故意不当行为”而导致的“死亡或严重身体伤害”外，该标准除其他障碍外，要求犯罪者“故意采取行动以达到一个错误的目的”。
+
+马西在 12 月 26 日表示：“**即使他们的口罩不起作用，援引PREP 法案，也可以保护销售口罩的公司。即使它们伤害了消费者，联邦政府也在强制要求使用其产品，并保护制造商**。”
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-492.png)图片来源:lifesitenews.com
+
+虽然有证据表明，最常见的口罩几乎没有提供针对 COVID 的保护（过去两年中的大部分时间都是有争议的，**但企业数据直到最近才开始承认**），但对 PREP 法案的影响的大部分获益，都属于根据川普政府的“神速行动”计划开发 COVID-19 疫苗的辉瑞、莫德纳和强生公司。
+
+这些疫苗的开发和发布时间，是疫苗开发通常所需时间的十分之一，是之前的记录保持者**腮腺炎疫苗所需时间的四分之一**，这导致人们担心：它们是否经过充分的安全测试。
+
+疫苗捍卫者指出，这个为期一年的开发期，并不是从头开始，而是依赖于对 mRNA 技术的多年研究； 并且 “神速行动”的创新之一，是同时而不是顺序进行开发过程的各个方面，从而消除了与安全无关的延迟。然而，这些因素并没有完全解释临床试验阶段的压缩——**每个阶段都可能需要****1-3 ****年的时间**——而（Covid疫苗）每个阶段只需要三个月。
+
+虽然在注射 COVID 疫苗后，向联邦疫苗不良事件报告系统 (VAERS) 报告的严重伤害病例还不到美国施用的总剂量的 1%，但 2010 年提交给美国卫生与公共服务部的报告（HHS）医疗保健研究和质量局（AHRQ）警告说，VAERS仅收集了“不到 1% 的疫苗不良事件”。去年 5 月，NBC 新闻援引几位主流专家的话说，他们承认：联邦疫苗监测存在“差距”。
+
+此外，数据表明： COVID 疫苗的广泛使用未能结束大流行。联邦政府认为，超过 2.06 亿美国人（符合条件的 62%）“完全接种”（鉴于疫苗的临时性质，这成了一个移动目标），但约翰斯霍普金斯大学 10 月份报告的数据显示，更多美国人死于 COVID -19疫苗， 到 2021 年 (353,000) ， 2020 年全年 (352,000)。莫德纳(Moderna)疫苗已于 2021 年全年上市；辉瑞（Pfizer）和强生（Johnson & Johnson）的注射剂已于 2 月底上市。
+
+11 月，《火焰》(The Blaze)高级编辑丹尼尔·霍洛维茨（Daniel Horowitz）呼吁各州，建立自己的医疗责任规则和 VAERS 类型的系统，并呼吁全国共和党候选人和现任者，抵制辉瑞的竞选捐款，让疫苗制造商的责任，“承诺支持立法，当政府授权的任何医疗产品，同时支持、资助或积极推广该产品时，这些医疗产品需要满足两个重要条件”：
+
+“**1****）消费者必须有直接的诉讼理由，来起诉政府支付的责任（没有上限），****”****他继续说道。**
+
+“2) 授权必须由与制造商或政府机构没有任何联系的第三方实体批准。这是恢复纽伦堡知情同意原则的唯一途径。”
+
+新闻来源 :[lifesitenews.com][Laws protecting drug companies from mask, vaccine liability a real problem, Rep. Massie says](https://www.lifesitenews.com/news/massie-calls-out-federal-law-shielding-drug-companies-from-mask-vaccine-liability/)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-2.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
