--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,26 +1,26 @@
 ---
-title: 朝鲜致函称因疫情无法参加北京冬奥会
+title: 立陶宛下令国营铁路公司不与中资企业签约
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835807/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835808/)
 
-作者：纽约香草山文艺部 – 宁文静
+作者：东京樱花团 – 在远方
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
-当地时间1月7日，朝鲜奥委会致函中共国奥委会及冬奥组委会，称朝鲜将不参加北京冬奥会。
+台媒1月6日报道，立陶宛总理发言人告诉媒体，立陶宛政府已于5日下令，基于国家安全利益考量，国营立陶宛铁路公司，将不与中共国拥有的西班牙桥梁制造商签署合约。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/8-5.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/7-7.jpg)
 
-朝鲜在信函中，一方面指责了美国及其盟国，试图阻碍冬奥会顺利举办。另一方面却借全球新一轮疫情非常严重为由，同样拒绝参加本届冬奥会。
+据悉，在西班牙登记的中共桥梁和道路基础设施公司，以最低出价6250万欧元，赢得了一项在立陶宛的桥梁建设招标。该公司网站上，将中共国路桥集团国际建设股份有限公司，列为母公司。
 
-时评人士指出，早在2021年9月初，国际奥委会IOC就因为朝鲜拒绝参加东京夏季奥运会，而决定暂停朝鲜奥委会的成员资格至2022年底，使朝鲜无法以国家队选手的资格参加北京冬奥会，但IOC并未否决朝鲜选手以个人身份参加北京冬奥会的可能性。此时这封信函不仅显得多余，更有“伤口上撒盐”之嫌。
+而国营立陶宛铁路公司去年曾表示，已要求政府审查这项合约，西班牙子公司与中共国之间的关系，为合约风险之一。
 
 参考链接：
 
-- [朝鲜：因全球疫情等原因无法参加北京冬奥会，但将全方位支持和声援中国](https://m.sohu.com/a/514860835_313745?scm=1104.0.0.0&amp;spm=smwp.home.fd-important.9.1641512406698kIPHEre)
+- [立陶宛下令國營鐵路公司 不與中資橋梁建造商簽約](https://cn.rti.org.tw/news/view/id/2121379)
 
 
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
 
-总编：文特
+总编：Irene木木
 编辑：Kathy文艺
 校正/发稿：海阔天空1
 
