--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,36 +1,36 @@
 ---
-title: 中国科学家因窃取孟山都公司的机密而认罪
+title: 01/08每日播报&#124;播客巨星乔·罗根加入盖特后引起注册浪潮
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1836157/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836215/)
 
-**编译：美哥**
-**编辑:   MSGZ  **
+**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/树叶.png)图片来源  theguardian.com
+**2022-01-0**8
 
-前孟山都雇员向海涛，在美期间被指控窃取了美国农业技术，目的是让中共政府受益。
+据《华盛顿邮报》1月7日报道，在播客巨星乔·罗根(Joe Rogan)加入后的几天内，盖特已经有超过 100 万新用户注册。
 
-周四，美国司法部门的起诉书里写道了44岁的向海涛密谋为中华人民共和国窃取商业机密。目前他已承认了罪行。
+报道称，盖特是一个吸引保守社交媒体用户的社交平台。罗根周日在该网站上发表了第一篇帖子的5天后，该平台的新用户已经达到了 100 万大关，。盖特发言人埃博尼·鲍登 (Ebony Bowden) 称，这使盖特网站的用户总数已经超过 了400 万。
 
-向海涛在密苏里州的孟山都总部曾以科学家的身份工作过，在他离开后，就买了一张飞回北京的单程票，而执法人员在他的电子设备里发现一份“营养素优化”算法的系统副本，而该演算法属于孟山都的机密。本案将于4月7号宣判，如果指控全部成立，其将面临15年有期徒刑和500万的罚金处罚。
+虽然罗根先生目前仍然拥有一个推特帐户，但是在乔治亚州众议员玛乔丽·泰勒-格林（Marjorie Taylor-Greene）的账号在周日被推特封号后，他考虑到了推特的审查制度，于是他加入了盖特。
 
-美国密苏里州东区的检察官弗莱明 (Sayler Fleming) 表示：“我们不能允许美国公民或者外国人，将敏感商业信息交给别国的竞争对手，这些罪行对美国经济和国家安全十分危险。”
+罗根先生在他的第一个盖特帖子中写道：“为了防止推特上的东西变得更蠢，我现在也在这里。欢呼吧！”
 
-美国联邦调查局反间谍助理小艾伦.科勒也称：“当像中国这样的政府盗取我们的技术来实现经济发展的同时，美国人成为了最大受害者。美国不仅仅是机密实验室里的军事技术，提高棉花产量的农业技术也同样会被对手觊觎。”
+据报道，在罗根先生加入盖特的第二天，也就是 1 月 3 日，盖特到注册人数就达到了 343,000，这是该网站自 7 月推出以来的最大单日注册量。 鲍登还补充说，盖特并没有支付罗根加入该网站的费用。
 
-向海涛的认罪是美国司法界对反对中国干涉的又一次新胜利。上个月，前哈佛大学的化学部门负责人，因为非法参武汉工程大学的项目而认罪。
+对于保守派来说，盖特网站的主要卖点是其较宽松的内容审核政策。盖特说，它允许所有关于政治和疫苗的观点，包括那些其他网站的事实核查员会标记为错误的观点。
 
-原文链接：[https://www.rt.com/news/545351-chinese-scientist-pleads-guilty/](https://www.rt.com/news/545351-chinese-scientist-pleads-guilty/)
+同时盖特是一个国际平台。截至周五，盖特表示其在美国有220万用户，其次是巴西的50万用户，以及英国、德国和法国的大量用户。
 
-*发布：盘古相聚*
+盖特的CEO杰森·米勒(Jason Miller)先生对《邮报》说：“这些数字证明，社交媒体用户开始意识到硅谷高管日益严厉的审查制度，并渴望获得替代方案。我们欢迎来自各种意识形态和背景的人在我们的平台上自由表达自己。”
 
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+（秘翻新闻主编Grace编译报道）
 
+发布:星星
+
+* * *
+
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
