--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,22 +1,50 @@
 ---
-title: 南极疫情是外来输入，还是疫苗引发？
+title: 澳23岁双重接种的举重冠军死于COVID-19
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1836115/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836117/)
 
-撰稿—祥瑞舟
-校对/上传—无明逆流
+翻译： Jenny Ball
 
-据外媒报道，来自南极的一个偏远科考站近日传来了坏消息，半个月以来科考站超过一半的工作人员感染了新冠病毒。报道中指出，该南极科考站为“比利时南极伊丽莎白公主站”，在12月14日发现了第一例感染新冠病毒的工作人员。此后，又有多人病毒检测呈阳性。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/121374_1.jpg)
-该报道指出，所有工作人员在来到该科考站之前，都已经完成了新冠疫苗的接种，并且病毒检测也都呈阴性，目前尚不清楚是如何感染新冠病毒的。
-考虑到在病毒和疫苗真相面前所谓世界主流媒体已经被利益群体收买，从该篇报道中我们无法找寻更多的真相。然而实际上看过这篇报道的读者都会问同样的问题，他们是怎么感染病毒的？
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-494.png)图片来源 :thegatewaypundit.com
 
-尽管还缺乏足够多的证据，可常识是任何人都无法忽略的：在基本与世隔绝的南极，是不可能有外来输入传染源的。如果说有，那唯一的传染源很有可能是疫苗接种者自身疫苗副作用爆发所导致，这和西安情况有些相似。正如七哥最近爆料中提到过的那样，西安疫情是接种疫苗副作用导致的后果。
+根据一份报告，一名 23 岁的科学家、举重冠军和健康运动员在检测出 Covid-19 呈阳性后，在悉尼一家医院死亡。
 
-除了爆料革命和部分西方正义人士一直在揭示病毒与疫苗真相，世界各国政府目前还都没有对病毒真相进行联合调查问责，疫苗接种也还没有被各国政府按下停止键，还需要更多时间去传播疫苗真相。
+詹姆斯·康迪利奥斯（James Kondilios）是堪培拉的居民，在因病毒并发症于 1 月 4 日在圣文森特医院去世之前，已知他没有任何潜在的健康问题。
 
-当疫苗灾难频发、出现大量死亡和伤残案例，整个世界秩序陷入停摆与混乱的时候，人类当下面临的这场生化危机真正的拐点才会到来。停止接种疫苗、病毒追责以及疫苗追责将接踵而至，所有真相终将水落石出，正义终将战胜邪恶！
+在新南威尔士州卫生当局透露他的身份后，他的家人和朋友都在哀悼并表示敬意。
 
+他的一位朋友在 Facebook 上发布了一条情感信息作为致敬：
+
+（更新 – 致敬后来被删除）
+
+“非死不可”说发文已不可访问
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-496.png)图片来源 :thegatewaypundit.com
+
+他最近的死亡提出了一个问题，如果他因为接种了双重疫苗，并且没有潜在的健康状况，但受到保护免受 COVID-19 病毒的疫苗的侵害，那么会发生什么？这打破了疫苗将保护您免受病毒侵害的整个说法。
+
+福奇博士、药企，企业媒体和公共卫生机构，从一开始就一直在对 Covid 撒谎。
+
+**他们说疫苗会阻止病毒传播**。
+
+**他们说接种疫苗的人可以不戴口罩。**
+
+**他们说接种疫苗的人不会重病。**
+
+**他们说接种疫苗的人不会死亡。**
+
+任何还在信任专家的人都应该得到他们的帮助。我们从一开始就试图用理智、逻辑，和实际统计数据，与他们进行这场对话，**我们应该为我们失去的自由、时间和财富而得到补偿。**
+
+医疗行业、公共卫生行业、学术界和政府的合法性已被 Covid 抹去。在“卡内科亚大帝” (KanekoaTheGreat)的这段视频汇编中观看他们的谎言。
+
+新闻来源 :[thegatewaypundit.com] [Double Vaccinated 23-Year-Old Powerlifter Champion with No Underlying Health Condition Dies from COVID-19 in Australia](https://www.thegatewaypundit.com/2022/01/double-vaccinated-23-year-old-powerlifter-champion-no-underlying-health-condition-dies-covid-19-australia/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
