--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,34 +1,57 @@
 ---
-title: 强制疫苗国家的典型案例
+title: 专制帝国对新疆三个世纪的杀戮
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1836064/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1836087/)
 
-撰稿：挺郭建筑师
-![](https://assets.gnews.org/wp-content/uploads/2022/01/803.jpg)图片制作：澳喜农场©森森
-2021 年2月8日起，强制疫苗在古老的欧洲大陆拉开了序幕。未接种疫苗者受到了诸如 “SIM卡被封”、“驾照被吊销”等一系列疯狂的制裁。一位名为文森特. 惹尼 (Vincent Geny)的作者于2022年1月6日在Marianne周刊发表了一篇报道，他总结了目前发生在疫苗独裁国家的一些典型案例。
+**作者/编辑  MSGZ**
 
-梵蒂冈是世界上第一个实施强制疫苗的国家。首先是对神职人员，然后在 10 月将其扩大到所有人。对拒绝接种的人惩罚从罚款到解雇不等。这一强制措施于 10 月初扩大到瑞士卫队成员。其中三个成员宁愿返回瑞士也不打疫苗，而另外三人无限期搁置接种计划。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-.png)图片来源  wemp.app
 
-奥地利政府自去年11月19日起宣布：从2021年 2 月 1 日起，任何 14 岁以上的人都必须接种疫苗。奥地利人必须在 3 月 15 日之前完成接种。拒绝接种者将每三个月缴纳 600 欧元的罚款，拒付者罚金将高到 3,600 欧元。希腊很快步奥地利后尘。希腊总理于 11 月底宣布自 1 月 16 日起，还没有接受第一针的人将面临 100 欧元的罚款，每月累加。
+在之前的大直播中，郭文贵先生爆料了中共国驻美大使，被戏称为“战羊”的秦刚在面对被美国政府官员问及中国新大使对新疆问题的表态。
 
-印度尼西亚是第一个实施强制疫苗措施的亚洲国家。在 2021 年 2 月开始对所有成年人实施强制接种措施，其惩罚方式多种多样，取决于地方当局。在一些地区，居民因未接种疫苗而被拒绝发放驾照。或者中断社保金或者停止收发工作之必要信件。在首都雅加达，未接种疫苗的人最高可被罚款 290 欧元。这些强制措施导致的极端情况时有发生。2021 年 10 月 17 日，一名 19 岁女子报警遭到强奸，警方因为她没有疫苗接种证明而拒绝接警。
+秦刚在美国人面前的回答极为狂妄至极。其刻意颠覆历史事实，居然把中共对待新疆惨绝人寰的罪行进行概念偷换，使一个原本是由于专制帝国主义扩张导致的战争、殖民所引发的政治和社会灾难，偷换成了“种族冲突”概念。并指出新疆问题与美国对待华人和黑人的历史问题相等同。这激起了美国政府的强烈不满。
 
-新加坡地方当局则将某些责任推卸给未接种者个人。所有入住重症监护病房的未接种病人都必须自己支付住院费用，约为 16,200 欧元。
+中共一直以来捏造“种族冲突”的谎言去掩盖国家恐怖主义的侵略行为，实用性的借助侵略性的国际规则扩张自己的版图和利益。18世纪至19世纪的西方帝国主义用炮舰强加给世界新的国际游戏规则，借以实施它们在世界各地的地缘战略，用以稳固它们的殖民地以及持续推进其权力版图的扩张。
 
-在巴基斯坦的旁遮普省，当局对未接种疫苗的人实施了断网。自 6 月 10 日起，未接种疫苗的人发现他们的 SIM 卡被封，而手机是该国最常用的上网方式。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/人物.png)图片来源  world.huanqiu.com
 
-在北美洲，加拿大联邦当局自 1 月 2 日起暂停了未接种者的失业救济金。联邦就业部长 Carla Qualtrough以保护就业和经济为名，要求民众接受其强制疫苗的“主导政策 ”。作为联邦政体的加拿大，每个省都有权颁布额外的政策措施。魁北克走得更远。蒙特利尔当局宣布，疫苗护照将扩展到烟酒售卖领域，而烟酒行业都由当局控制。这一措施将在未来几天内公布。
+中共依赖主权这一从欧洲地域（威斯特伐利亚体系）和帝国主义时代所形成的国际生态下的法律概念对周边地区和国家进行肆意的权力主张和外交叫嚣。包括对新疆、台湾、西藏、无不如是。然而，这种现代国际体系法律概念非常不适用于分析和解决内亚和东亚地域由于帝国历史所形成的权力结构和国主张。
 
-法国政府也步步紧逼，1月6日早晨5点，通过议会偷偷摸摸将健康护照变成强制性疫苗护照。
+现代主权概念不能强行解释和碾压从蒙古世界帝国、明朝的朝贡体系、清帝国的“中外一体”体系延续的地域历史所形成的国际关系性质和各地域权力实体对于追求现代国家性质的独立主张。
 
-世界各主流国家通过强制疫苗政策加速戕害国民，追杀觉醒的民众。这也恰恰显示了政府首脑、政客和中共勾结者们的心虚。他们欲盖弥彰，穷凶极恶，必将激起更多良知媒体和民众的觉醒，奋起反抗，终为其送葬。
+不光中共在新疆的殖民统治现实以及新疆地域人民一贯的抗争所表达的国家独立意志，还是主张继承自清帝国和中华民国的遗产，均没有合法性的依据。
 
-新闻参考链接：
+“新疆”这个地域名称是源于清末，始于18世纪中叶乾隆皇帝对准噶尔帝国（蒙古人势力）彻底征服之后对于帝国新领土的定义。乾隆在征服准噶尔之后为绝后患，下令对蒙古人卫拉特族群进行种族灭绝，以期把这一族群在这一地域上彻底抹除。除妇幼充作奴役和一小部分逃往俄罗斯帝国及中亚穆斯林地区以外，其余不是死于瘟疫就是死于清军的屠刀之下，如今在新疆的蒙古族人只占新疆人口的约5%。同时在南疆，作为准噶尔帝国附庸势力的穆斯林苏菲派势力也被瓦解。
 
-[https://www.marianne.net/societe/sante/cartes-sim-bloquees-permis-retires-ces-sanctions-folles-qui-visent-les-non-vaccines-dans-le-monde](https://www.marianne.net/societe/sante/cartes-sim-bloquees-permis-retires-ces-sanctions-folles-qui-visent-les-non-vaccines-dans-le-monde)
+清帝国对准噶尔帝国近100年的征服过程是彻头彻尾的帝国主义行为。从康熙皇帝至乾隆皇帝，为何执着于征服准噶尔帝国？这与当时谁能成为藏传佛教的保护者，掌握宗教这一意识形态进行影响力投射的关键路径有着绝对关系。藏传佛教作为当时的内亚和东亚在哲学层面的宇宙中心，存在的价值和意义对于周边的帝国统治者来说不容旁骛。
 
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+准噶尔大汗噶尔丹作为第五世达赖喇嘛的弟子以及第巴桑结嘉措的师弟，其与藏传佛教格鲁派（黄帽教派）的关系非同寻常。尤其是它 们两者之间的军事同盟关系，以及第五世达赖喇嘛授意噶尔丹为格鲁派进行势力扩张，支持其侵略信奉藏传佛教“噶玛噶举派”（黑帽教派）的喀尔喀蒙古汗国（现今蒙古共和国地域），包括桑结嘉措隐瞒清廷第五世达赖喇嘛圆寂的消息，加上后来噶尔丹的继任者策妄阿拉布坦派兵攻入拉萨杀死了处决桑结嘉措的“拉藏汗”，均深深的触怒了清廷。
+
+清廷不能容忍藏传佛教与准噶尔之间存在的亲密关系，也不能容忍在其帝国的周边出现令一个不受它掌控的意识形态中心（宇宙中心）。虽然准噶尔在过程中对清廷示弱假意臣服了一段时间，但是其想和藏传佛教之间形成一种脱离于清廷掌控的意识形态关系的意志始终没有改变。这是乾隆皇帝最终对准噶尔蒙古人实施种族灭绝的绝对理由。
+
+除了准噶尔蒙古人，拥护明朝的穆斯林群体也是受清廷排挤和迫害的对象，从康熙皇帝以来，清廷一直挑拨准噶尔与穆斯林之间的种族矛盾。这是新疆、陕西和甘肃的穆斯林（包括汉人）早期起义和历次起义的原因。清廷为了进一步控制新疆而实行的汉人殖民和军事屯垦，加剧了种族间的冲突。
+
+战羊秦刚说汉人被穆斯林屠杀的说辞只是在断章取义，而刻意回避了清帝国对新疆进行的早期帝国主义侵略事实和本质。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/人物1.png)图片来源  Quora
+
+1820年代，曾统治南疆的穆斯林苏菲派仅进行了反扑，试图重新获得控制权。1864年，随着穆斯林的起义 ，在该地区竞相建立了合法控制权。该地域包括陕西、甘肃在十余年的动荡过程中，加之周边的沙俄帝国、奥斯曼帝国、英帝国均在这个欧亚帝国的边境地带持续投射了地缘影响力。使地方势力之间以及族群之间的矛盾更为纠葛和复杂。虽然随后清廷派左宗棠率军碾压了穆斯林起义活动，表象上新疆又回到了清帝国的掌控之中，但是清廷的帝国专制意识形态、遣使汉人殖民进行文化同化、民族及宗教歧视的侵略行为，埋藏了使新疆持续几百年动荡的久远的不安因子。
+
+进入20世纪，随着沙俄帝国、清帝国、奥斯曼帝国等欧亚帝国的陆续瓦解，以及两次世界大战对内亚地缘的决定性影响，两个“东突厥斯坦政权”相继出现，不过它们存在的时间非常短暂。国民党政权在东亚大陆的军事惨败，内亚和东亚地区便落入了共产国际的魔爪，新疆亦被苏联和中共政权瓜分。中共政权获得对新疆的控制权后，持续用殖民手段侵占土地，对非汉人的族群进行文化倾轧，挑拨汉人和穆斯林之间的种族矛盾，同时对各族群进行持续至今的镇压和屠杀。
+
+从17世纪至今新疆地域的动荡与冲突，不能听凭中共的偏面之辞。新疆存在的冲突不能简单归结为种族之间自然产生的宗教、文化冲突，而是由清帝国、俄国、中华民国、中共帝国对这一地域持续的帝国主义侵略行为，才最终导致了如今的种族矛盾。
+
+帝国主义、国家主义、国家恐怖主义是为害地区和平安全的始源。中共政权抱持的帝国主权遗产，意淫接续的统治，把新疆置于专制、恐怖、血腥的阴影下达三个世纪，其间所犯下罪行、，血债，国际社会应该不容置疑地剥夺其对新疆统治的主权合法性，以便使新疆人民能顺利地进行民族自决。
+
+*发布：盘古相聚*
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
