--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,60 +1,34 @@
 ---
-title: 红旗和火最怕水,共产党最怕壬寅年,风是上天给我们的信号
+title: 快手就算大规模裁员最终也得跟着CCP一起破产
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1835932/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1835945/)
 
-G-TV视频链接：[https://gtv.org/video/id=61d9542adffab035958c2df3](https://gtv.org/video/id=61d9542adffab035958c2df3)
+撰稿：永遠の小学生文筝
+![](https://assets.gnews.org/wp-content/uploads/2022/01/802.jpg)图片来自网络
+**快手自去年底开始了大规模裁员**
 
-**郭文贵先生：**疯狂的疯就是自然的“风”加上一个“疒”字边，就是一个人违背自然的东西你就中风了，人就会中风。然后呢你这个形为精神上就会疯狂。金木水火土，大家看到中国这个定义很了不起的。西方有阳历年，这个有一年十二个月，中国有农历年十二个月，用西方所谓的星座，面对着中国人的十二属相。
+根据澎湃新闻的报导，短视频APP公司快手科技的员工向其透露，快手始于去年年末的仍在继续，有的部门裁员比例多达30%。2021年9月28日发布的快手内部邮件显示，快手有国际化、商业化、电商、游戏四大部门，据说这波裁员中都有一定比例的员工被裁。虽然是想通过裁员减少支出，但最终仍旧会被中共搞死。
 
-今年是虎年，属虎的战友们今年记住，虎年除了你本命年记住，特别是虎年，虎年几乎属虎的人你有两个极端，一个是今年是你最好的年，一个是让你一定要小心，特别是要小心车祸，交通这种金属的事件一定要防它。中国人有中国的逻辑，它的文化经历是有道理的，它跟西方的星座是遥相对应的，没有任何矛盾，千万记住它不是互相否认的，只是用英语说了我爱你，“I love you”。中文说“我爱你”，是一模一样的。它不是说翻译到中文就是“我恨你”，中文到了西方就是“我恨你”，不是那个，都是同一个方向的。
+**快手缩减成本的各种动作**
 
-12生肖，来了，我们的海瑟来了，海瑟我这一来我的妈呀，你们也太狠了吧，我刚讲到这就来一个大师级的，这是，我是她粉丝，绝对粉丝啊。昨天在她面前我想班门弄斧丢人了，你别打我脸，你别打我脸，七哥刚有点水，你别打脸，给点面子。
+为了缩减成本快手进行了各种不得人心的政策，调整租房补贴范围，取消了免费的三餐以及下午茶。此前还被曝出上海、广州、深圳、北京的商业化团队部分业务条线要被取消，其余的要在12月底前搬到杭州，并要求一部分员工在搬家和离职之间选择。
 
-所以说这12生肖还有这个星座它之间都是文化和人类文明的累积，特别是中国，中国共产党今天的红旗，大家记住这个红旗的概念，你一定研究研究红旗在大汉朝，是干什么的？还有在中国的历史上红是代表着什么？
+**快手股票的走势说明是个垃圾股**
 
-红中五星出现的黄，共产党是人类上最相信，就是所谓的它不相信的神，还有风水的，盘古这个从龙头在冬奥会之前，变成了男人的生殖器，割皮的包头，它不是这是真的，它不是玩笑，不是黄色笑话，你觉得它荒唐到什么程度啊？我的妈呀，央金拉姆也来啦，吓死人啦。
+从快手上市以来的走势就可以看出这不是家有优质产品的公司，只是作为互联网中常见的被资本包装后用来套钱的概念公司而已。对于跟风进入的散户而言，最终只是替别人接盘而已。当资金背后的中共利益集团套现之后，快手只会成为持续下跌的垃圾股。
 
-哎呀，我的天哪，这是啥这是？这说着说着你看看，这海瑟大师，今天都全来吃的了，全都有助于水啊。所以说你看中国的共产党的红旗，红跟什么对冲，知道吗？最冲的，红旗最怕的就是水，火里边最怕的就是水，壬寅之年是共产党最怕的，甲子年它害怕，虎年它害怕。
+**快手与其他互联网公司最终会被中共收走**
 
-彭丽媛属虎的，习近平是属蛇的，你记住他们，包括王岐山这个属老鼠的，和七个常委，你看每个人的属相，包括共产党现在你知道共产党干了什么事？在天坛，在天坛每年大年三十，在北京住的战友你告诉我哪有一年大年三十晚上天坛没动静了？大家去想想为什么有动静？中共的领导人雍和宫必去，天坛必祭必拜，没有一个人不上。
+去年多家互联网企业都经历了大规模裁员，跟习近平要将国家带向北朝鲜模式分不开。习近平希望的是影视、音乐、艺人等都为共产党服务，创造歌颂党的作品。像游戏这种跟党抢人脑地盘的行业，自然是无法允许其存在的，党需要的是党文化控制下的人民，也就是听话的奴隶，对游戏上瘾的人可不会任劳任怨。
 
-北京唯一文化大革命没被摧毁的叫太监庙，香山下的太监庙叫中官村，中官村就是官员的官，过去的太监叫中官，后来中官就不好听，就翻成了中关，关头的关，关村，就是太监的村，老了退休去那的。
+参考消息：
 
-太监庙就在香山下面，跟这个戒台寺都没多远的，为啥共产党不去拜，他去雍和宫拜啥去？他不信佛他去天坛拜啥？我们海瑟大师一会儿给他讲讲，你讲讲，这他信的是真的像张高丽说的“宇宙无限大，地球一粒沙，我代表宇宙，你是沙，你是沙里边的沙”。
+[中國短影音巨頭再傳裁員30% 規模擴及4大事業部門](https://udn.com/news/story/7333/6011532?from=udn-catebreaknews_ch2)
 
-风这个概念实际上就是大自然给你传递信息，就今天我们这叫上天给我们的信号，人类没有了风就必死无疑了。风干，你听说风干，你听说过火干过什么吗？风干。风干这个词什么时候来的？看看，大家看一看，最早的玉淙、玉钺、夏文化里边有个风，叫风潮，风不是疯掉的疯，封关的封，是风潮。
+[快手再曝裁员：覆盖四大事业部，个别团队裁员比例30%](https://www.thepaper.cn/newsDetail_forward_16137691)
 
-为什么叫风潮？风是代表大自然的信息，是人类生存的最重要力量之一，是金木水火土的最重要的其中之一，是人类的元素。风不是元素，水和风，还有木，还有火。
-
-字幕来源：[2022年1月1日文贵大直播元旦特别节目“正道至善，除恶建邦”全文字版（三）](https://gnews.org/zh-hans/1817244/)
-
-编辑整理：Jacques；
-
-字幕文件制作：小满；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
