--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,27 +1,28 @@
 ---
-title: 美国医学协会谴责CDC新隔离指南
+title: 中共“温水煮百姓”，全民食草成常态
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835804/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835806/)
 
-作者：纽约香草山文艺部 – 宁文静
+作者：纽约香草山教育部 – Noemi
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
-1月5日，美国医学协会AMA指责美国疾病控制和预防中心，发布了“混乱的”和“适得其反的”新冠病毒检疫和隔离新指南。
+1月5日，郭先生在大直播节目中透露，习总加速师在内部会议中称，要维持住中共政权，必须要让国内的老百姓有饭吃，守住35%的就业红线，青菜和面粉起码要坚持两年。同时，中共政府已计划全国未来将有1至1.5亿人的非自然死亡。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/6-4.png)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/9-3-scaled.jpg)
 
-该委员会主席杰拉尔德·哈蒙博士在一份声明中说，美国人民应该得到及时、准确和明确的指导。相反，CDC的新建议不仅令人困惑，而且加大了传播病毒的风险。隔离和检疫期从原先的10天缩短到5天，将增加数十万人在工作场所和学校受到感染的风险。
+郭先生爆料，目前中共已存储供全国人食用18个月的储备粮。并且未来两年将以“温水煮青蛙”的方式，使全国老百姓逐步适应躺平、吃草的困窘状态。
 
-医生们认为目前需要进行更多的研究，以确定奥密克戎的严重程度和逃避免疫反应，以及疫苗的保护力，但这些建议可能进一步令卫生保健系统不堪重负。哈蒙博士同时敦促政府，尽一切能力加强检测盒的可用性。但测试盒的匮乏并不能成为缩短隔离期的理由。 虽然CDC强调更改指南的原因是研究表明，病毒传播一般在发病前1-2天和发病后2-3天。但评论人士指出，隔离期缩短为5天跟多个领域出现的人员短缺有关，社会运转的基本功能正面临着严重问题。
+同时，在中共国内，数字人民币将作为唯一合法的加密货币，并取代掉纸质的人民币，成为中共用来消灭私人财富、控制墙内民生的有力武器。
+
+郭先生最后向墙内老百姓预警，虽然短期内中共国的物价、房价还会继续保持稳定，但普通民众将被逐渐分级，最低级的民众则会被中共消灭。且全国各地还将有更多的老百姓像西安市里被残害的老百姓一样，一次次地被从城市隔离，一次次地被赶到深山老林，被赶到河边，最后悄悄地死去。这样的惨剧将在未来的一年中不断发生。
 
 参考链接：
 
-- [CDC’s new COVID-19 isolation guidance called out by American Medical Association](https://www.foxnews.com/health/cdc-covid-isolation-guidance-called-out-american-medical-association)
+- [2022年1月5日 文贵大直播：](https://gtv.org/video/id=61d59a1931a71619b57520a4)
 
 
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
 
 总编：文特
-编辑：Kathy文艺
 校正/发稿：海阔天空1
 
 **更多资讯，更多关注**
