--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,43 +1,39 @@
 ---
-title: 澳23岁双重接种的举重冠军死于COVID-19
+title: 泰勒·格林痛斥DC沼泽——我不相信我们的政府
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836117/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836214/)
 
 翻译： Jenny Ball
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-494.png)图片来源 :thegatewaypundit.com
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-498.png)图片来源:thegatewaypundit.com
 
-根据一份报告，一名 23 岁的科学家、举重冠军和健康运动员在检测出 Covid-19 呈阳性后，在悉尼一家医院死亡。
+由于腐败的 华盛顿DC 沼泽一直忙于在 1.6 周年纪念日上表演党派戏剧，甚至一些共和党黑客也加入了进来——泰德·克鲁兹（Ted Cruz）就是其中之一——众议员马特·盖茨（Matt Gaetz）和玛乔丽·泰勒·格林(Marjorie Taylor Greene)正在驳斥他们的剧本，并揭穿建制派的谎言。
 
-詹姆斯·康迪利奥斯（James Kondilios）是堪培拉的居民，在因病毒并发症于 1 月 4 日在圣文森特医院去世之前，已知他没有任何潜在的健康问题。
+可悲的是，盖茨和格林似乎是极少数关心 1.6 事件真相的民选代表——甚至是极少数关心那些作为政治犯被政府劫持为人质的美国公民。
 
-在新南威尔士州卫生当局透露他的身份后，他的家人和朋友都在哀悼并表示敬意。
+其他共和党人在哪里？ 他们不可能都像丹·克伦肖（Dan Crenshaw）一样，对吗？
 
-他的一位朋友在 Facebook 上发布了一条情感信息作为致敬：
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-500.png)图片来源:thegatewaypundit.com
 
-（更新 – 致敬后来被删除）
+周四，盖茨和格林举行了新闻发布会，两人在会上提请注意 1 月 6 日因政治信仰被违宪关押在特区古拉格(DC Gulag) 监狱的人们。
 
-“非死不可”说发文已不可访问
+与其称美国公民为恐怖分子，并与1/6的宣传一起上——再次看看你泰德·克鲁兹——美国第一双人组 DC 沼泽，对爱国者进行可怕和专横的追捕，使数百名美国人被捕入狱。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-496.png)图片来源 :thegatewaypundit.com
+在盖茨浏览了1/6 的几段视频后，这些视频在很大程度上被大型科技公司和媒体压制了，格林质疑联邦调查局为什么没有逮捕臭名昭著的1/6催化剂雷-埃普斯和其他几个在1/6可能由联邦调查局策划的事件中发挥主要作用的人。
 
-他最近的死亡提出了一个问题，如果他因为接种了双重疫苗，并且没有潜在的健康状况，但受到保护免受 COVID-19 病毒的疫苗的侵害，那么会发生什么？这打破了疫苗将保护您免受病毒侵害的整个说法。
+最后，格林说FBI 和 DOJ 需要好好解释。
 
-福奇博士、药企，企业媒体和公共卫生机构，从一开始就一直在对 Covid 撒谎。
+“当我经过 DC 监狱时，我会告诉你，我没有看到谁——我没有看到雷·埃普斯（ Ray Epps），我没有看到他在那里浪费了几个月的时间，**被剥夺了正当程序的权利，被剥夺了见家人、接受治疗、理发和刮胡子的能力**。我没看到他在那里面。
 
-**他们说疫苗会阻止病毒传播**。
+你知道我还没有看到谁吗？我没有看到那个叫 约翰·沙利文（John Sullivan）的人——**一个参加过“安提法”(Antifa)、黑命贵(BLM)骚乱和整个运动的人，但却突然在 1 月 6 日决定成为川普的支持者**。
 
-**他们说接种疫苗的人可以不戴口罩。**
+[他] 是在国会大厦射击阿什莉·巴比特（Ashley Babbitt） 谋杀犯，然后将他的视频出售给媒体的那个人。他不在副监狱长凯瑟琳·兰德金（Kathleen Landerkin）华盛顿的监狱里，所以，我认为我们有很多问题要问，**应该回答这些问题的人，是我们的 ****FBI ****和我们的司法部。**”
 
-**他们说接种疫苗的人不会重病。**
+在目睹了整整一年之后，格林直截了当地说：“我不再相信我们的政府了。”
 
-**他们说接种疫苗的人不会死亡。**
+盖茨和格林关于 DC 政治犯的整个新闻发布会，可以在文章素材链接查看。
 
-任何还在信任专家的人都应该得到他们的帮助。我们从一开始就试图用理智、逻辑，和实际统计数据，与他们进行这场对话，**我们应该为我们失去的自由、时间和财富而得到补偿。**
-
-医疗行业、公共卫生行业、学术界和政府的合法性已被 Covid 抹去。在“卡内科亚大帝” (KanekoaTheGreat)的这段视频汇编中观看他们的谎言。
-
-新闻来源 :[thegatewaypundit.com] [Double Vaccinated 23-Year-Old Powerlifter Champion with No Underlying Health Condition Dies from COVID-19 in Australia](https://www.thegatewaypundit.com/2022/01/double-vaccinated-23-year-old-powerlifter-champion-no-underlying-health-condition-dies-covid-19-australia/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
+新闻来源 :[thegatewaypundit.com] [WATCH: MTG SLAMS Corrupt DC Swamp During Press Conference About Jan 6th Prisoners – “I Do Not Trust Our Government”](https://www.thegatewaypundit.com/2022/01/watch-mtg-slams-corrupt-dc-swamp-press-conference-jan-6th-prisoners-not-trust-government/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
 
 * * *
 
